--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-07-26 09:03:21
+lastsearch = 2024-07-26 10:23:08
 
 [chieutrelanlan.com]
 match = -41.7%%
@@ -207,9 +207,9 @@ title = VPF: Các Giải Bóng Đá Chuyên Nghiệp Việt Nam - V.League
 url = https://vpf.vn/mobile/
 
 [m.facebook.com]
-match = -20.8%%
-title = [GO FINANCE 2024] 🔥 CHÍNH THỨC CÔNG BỐ ...
-url = https://m.facebook.com/cuocthigofinance/photos/go-finance-2024-chính-thức-công-bố-quy-chế-thi-vòng-3-lời-đầu-tiên-ban-tổ-chức-x/989254106540033/
+match = -37.5%%
+title = HR - TUYỂN DỤNG | CHI NHÁNH TƯ NHÂN CÓ BHXH
+url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8355035217853785/
 
 [thethao247.vn]
 match = -20.8%%
@@ -295,4 +295,44 @@ url = https://www.qdnd.vn/kinh-te/tin-tuc/tong-cong-ty-tan-cang-sai-gon-lan-thu-
 match = -70.8%%
 title = Máy ép thuỷ lực 250T, dây chuyền sản xuất chiếu trúc
 url = https://sumac.vn/du-an/may-ep-thuy-luc-250t-day-chuyen-san-xuat-chieu-truc
+
+[btmc.vn]
+match = -100.0%%
+title = Công ty TNHH Bảo Tín Minh Châu - BTMC.VN - Giá vàng, Gia ...
+url = https://btmc.vn/
+
+[nld.com.vn]
+match = 4.2%%
+title = sitemaps-2011-11-16-20.xml
+url = https://nld.com.vn/sitemaps/sitemaps-2011-11-16-20.xml
+
+[lichhop.dongthap.gov.vn]
+match = -87.5%%
+title = S6: 20 /KH-BHXH Std NG0 1 VTR BONG THAP ... KE HOACH ...
+url = https://lichhop.dongthap.gov.vn/sngvu/thumoihop/20.ke_hoach_.PDF
+
+[znews.vn]
+match = -70.8%%
+title = Thành viên Maroon 5: 'Vợ ganh tỵ khi tôi đến Việt Nam'
+url = https://znews.vn/thanh-vien-maroon-5-vo-ganh-ty-khi-toi-den-viet-nam-post1449233.html
+
+[dautieng.binhduong.gov.vn]
+match = -66.7%%
+title = UY BAN NHAN DAN HUYEN dAu TIENG S6:933? /QD-UBND
+url = http://dautieng.binhduong.gov.vn/portal/File/Document/202234130320.pdf
+
+[sxd.kiengiang.gov.vn]
+match = -17.6%%
+title = s6: 4 3,c /TB-SXD
+url = https://sxd.kiengiang.gov.vn/Lists/TinTuc/Attachments/1114/436_TB-SXD_2020-03-16 (cT3-2020).pdf
+
+[top10danang.com]
+match = -83.3%%
+title = Top 10+ địa chỉ bán chiếu trúc Đà Nẵng cao cấp loại 1 GIÁ ...
+url = https://top10danang.com/top-10-dia-chi-ban-chieu-truc-da-nang-cao-cap-loai-1-gia-re-uy-tin/
+
+[giavangvietnam.com]
+match = -83.3%%
+title = Giá Vàng Mi Hồng - Vàng Miếng, Trang Sức, Vàng Tây, Nhẫn ...
+url = https://giavangvietnam.com/gia-vang-mi-hong/
 
