--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-26 05:31:59
+lastsearch = 2024-07-26 10:17:37
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -237,9 +237,9 @@ title = Henny Penny EC05-001 TERM RING #10 16-14 GA NI PL
 url = https://www.partstown.com/henny-penny/henec05-001
 
 [pubs.acs.org]
-match = -338.5%%
-title = Structure and Role of a Ga-Promoter in Ni-Based Catalysts for ...
-url = https://pubs.acs.org/doi/10.1021/jacsau.3c00677
+match = -315.4%%
+title = 4 V Na Solid State Batteries Enabled by a Scalable Sodium ...
+url = https://pubs.acs.org/doi/10.1021/acsenergylett.4c01855
 
 [www.postercompliance.com]
 match = -207.7%%
@@ -352,9 +352,9 @@ title = Charlie Condon - 2024 Baseball Roster
 url = https://georgiadogs.com/sports/baseball/roster/charlie-condon/7496
 
 [www.nature.com]
-match = -230.8%%
-title = 68 Ga generator based on nano-SnO 2 for PET imaging
-url = https://www.nature.com/articles/s41598-020-69659-8
+match = -238.5%%
+title = Archaean multi-stage magmatic underplating drove ...
+url = https://www.nature.com/articles/s41467-024-50435-5
 
 [www.dictionary.com]
 match = 0.0%%
@@ -575,4 +575,24 @@ url = https://www.dot.state.wy.us/home/driver_license_records/driver-license.htm
 match = -269.2%%
 title = Legal Driving Age By State (2024): Complete Licensing ...
 url = https://1800lionlaw.com/driving-age-by-state/
+
+[www.mayoclinic.org]
+match = 0.0%%
+title = 
+url = https://www.mayoclinic.org/patient-centered-care/does-mayo-clinic-treat-my-condition
+
+[www.science.org]
+match = -153.8%%
+title = The atomic intelligence of liquid metals
+url = https://www.science.org/doi/10.1126/science.adn5871
+
+[www.cancer.gov]
+match = -146.2%%
+title = Electromagnetic Fields and Cancer - NCI
+url = https://www.cancer.gov/about-cancer/causes-prevention/risk/radiation/electromagnetic-fields-fact-sheet
+
+[onlinelibrary.wiley.com]
+match = -246.2%%
+title = Engineered Regenerative Isolated Peripheral Nerve ...
+url = https://onlinelibrary.wiley.com/doi/full/10.1002/adma.202406652
 
