--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-26 04:28:58
+lastsearch = 2024-07-26 10:28:33
 
 [shopee.vn]
 match = -137.5%%
@@ -72,9 +72,9 @@ title = Hoi Mei Chan - Construction Industry Council
 url = https://hk.linkedin.com/in/hoi-mei-chan-87992911b
 
 [vnexpress.net]
-match = -87.5%%
-title = Lính Nga nâng cấp giáp cho 'xe tăng mai rùa'
-url = https://vnexpress.net/linh-nga-nang-cap-giap-cho-xe-tang-mai-rua-4742405.html
+match = -137.5%%
+title = Xe tăng mai rùa Nga xâm nhập phòng tuyến Ukraine
+url = https://vnexpress.net/xe-tang-mai-rua-nga-xam-nhap-phong-tuyen-ukraine-4736187.html
 
 [www.tiktok.com]
 match = -212.5%%
@@ -149,7 +149,7 @@ url = https://drallen.com.vn/khong-phan-loai/hoi-chung-co-rua-la-gi/
 [m.facebook.com]
 match = 66.7%%
 title = Chấn Hội Mai
-url = https://m.facebook.com/61557079050657
+url = https://m.facebook.com/61561372675364
 
 [vnba.org.vn]
 match = -175.0%%
