--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-07-26 08:10:39
+lastsearch = 2024-07-26 10:24:50
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -282,9 +282,9 @@ title = Ta Hậu ăn Thích Người Gì Con Môn Nhất - velabelle.it
 url = https://velabelle.it/9802909-ta-ăn-nhất-người-hậu-gì-môn-thích-con.html
 
 [voz.party]
-match = -35.7%%
-title = Cha con 'người rừng' quay quắt nhớ cuộc sống hoang dã
-url = https://voz.party/d/289649-cha-con-nguoi-rung-quay-quat-nho-cuoc-song-hoang-da/36
+match = -7.1%%
+title = Tại sao các bác lại mê bóng đá? - VozForums
+url = https://voz.party/d/166359-tai-sao-cac-bac-lai-me-bong-da/35
 
 [mogi.vn]
 match = -42.9%%
