--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-26 04:18:41
+lastsearch = 2024-07-26 10:22:47
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -47,9 +47,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.thegioididong.com]
-match = -206.2%%
-title = Top 13 game ít dung lượng trên mobile cực hay để trải ...
-url = https://www.thegioididong.com/game-app/top-game-it-dung-luong-tren-mobile-cuc-hay-de-trai-nghiem-1358044
+match = -193.8%%
+title = Samsung Galaxy A14 4GB - Chính hãng, giá tốt, có trả góp
+url = https://www.thegioididong.com/dtdd/samsung-galaxy-a14-4gb
 
 [saigontourist.edu.vn]
 match = -100.0%%
