--- a/images/nem-everon-160x200x14/config.ini
+++ b/images/nem-everon-160x200x14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-160x200x14.html
 lastopen = 2024-06-06 17:09:53
 
 [search]
-lastsearch = 2024-07-26 04:45:33
+lastsearch = 2024-07-26 10:31:02
 
 [everon.vip]
-match = -10.0%%
-title = NỆM EVERON
-url = https://everon.vip/nem
+match = 44.4%%
+title = Nệm Everon Ceramic
+url = https://everon.vip/nem-everon-ceramic
 
 [everonvn.com.vn]
 match = 23.8%%
@@ -42,8 +42,8 @@ title = Đệm bông ép everon 160 x 200 x 15 cm hàng chính hãng, ...
 url = https://tiki.vn/search?q=đệm bông ép everon 160 x 200 x 15 cm
 
 [demqueensweet.com]
-match = -119.0%%
-title = Giá Đệm Queensweet, Đệm Hàn Quốc Queensweet Hà Nội ...
+match = -57.1%%
+title = Đệm Queensweet Giá Rẻ – Đệm Hàn Quốc ...
 url = https://demqueensweet.com/
 
 [everon365.vn]
@@ -52,14 +52,14 @@ title = Đệm bông ép Everon kết hợp topper 5cm
 url = https://everon365.vn/dem-bong-ep-everon-ket-hop-lop-topper-5cm.html
 
 [www.everonvn.vn]
-match = -100.0%%
-title = Bảng giá các kích thước đệm bông ép Everon vỏ gấm ...
-url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
+match = -71.4%%
+title = Bảng giá đệm bông ép Everon 1m6 (1.6m hay 160 x 200)
+url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m6.html
 
 [everon.com.vn]
 match = -114.3%%
 title = 160 X 200 Archives | Showroom Chăn Ga Gối đệm EVERON
-url = https://everon.com.vn/size/160-x-200/?srsltid=AfmBOopQOjaHzKSIJ-12X7vjjgnPSbCiq2RX0HbNRladgx_q8uqcaKsh
+url = https://everon.com.vn/size/160-x-200/
 
 [demxanh.com]
 match = -128.6%%
