--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-26 05:49:58
+lastsearch = 2024-07-26 10:19:43
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -17,14 +17,14 @@ title = Identification of 12 new susceptibility loci for different ...
 url = https://pubmed.ncbi.nlm.nih.gov/28346442/
 
 [www.dir.ca.gov]
-match = -126.3%%
-title = Workers' Compensation Appeals Board - Panel decisions
-url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
+match = -21.1%%
+title = ADDITIONAL CASE INFORMATION
+url = https://www.dir.ca.gov/dwc/sb1160-ab1244/Consolidation-Notice-First-Hearing/Garcia-Additional-Cases-Info.pdf
 
 [profiles.ucsf.edu]
-match = 5.3%%
-title = Margaret Tempero, MD
-url = https://profiles.ucsf.edu/margaret.tempero
+match = -7.7%%
+title = Li Zhang, PhD
+url = https://profiles.ucsf.edu/li.zhang
 
 [www.ncbi.nlm.nih.gov]
 match = -168.4%%
@@ -37,9 +37,9 @@ title = Shawkat Hammoudeh, PhD - LeBow College of Business
 url = https://www.lebow.drexel.edu/people/shawkathammoudeh
 
 [profiles.ucsd.edu]
-match = -41.7%%
-title = Tommi Gaines
-url = https://profiles.ucsd.edu/tommi.gaines
+match = -10.5%%
+title = Gary Vilke - UCSD Profiles
+url = https://profiles.ucsd.edu/gary.vilke
 
 [medboard.nv.gov]
 match = -100.0%%
@@ -54,7 +54,7 @@ url = https://www.techcosmos.com.hk/thomas/publications/
 [www2.ed.gov]
 match = -126.3%%
 title = Candidates for the US Presidential Scholars Program
-url = https://www2.ed.gov/programs/psp/2023/candidates.pdf
+url = https://www2.ed.gov/programs/psp/2024/candidates.pdf
 
 [www.ajnr.org]
 match = 21.1%%
