CI images update

--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-26 05:47:11
+lastsearch = 2024-07-26 10:37:21
 
 [www.tiktok.com]
-match = 0.0%%
-title = Huda Beauty Vitamin C
-url = https://www.tiktok.com/discover/huda-beauty-vitamin-c
+match = -193.8%%
+title = Wendy Dodo Sugar Box opening . . . #wendydodosugar ...
+url = https://www.tiktok.com/@unboxing_serotonin/video/7252768147143462186
 
 [digitalmaine.com]
 match = -75.0%%
@@ -240,4 +240,9 @@ url = https://www.amazon.com/Ground-Swimming-Heater-Sundome-Panels/dp/B001WK6PCY
 match = 20.0%%
 title = warm dream
 url = https://m.shein.com.vn/store/home?store_code=4482925045&type=selection&routeId=102828784
+
+[www.reddit.com]
+match = -106.2%%
+title = Avatar Studios Logo : r/TheLastAirbender
+url = https://www.reddit.com/r/TheLastAirbender/comments/lrqa8p/avatar_studios_logo/
 
