--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-26 03:29:07
+lastsearch = 2024-07-26 10:44:50
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -19,7 +19,7 @@ url = https://www.thegioididong.com/hoi-dap/2-cach-do-size-vong-tay-lac-tay-chin
 [cellphones.com.vn]
 match = -212.5%%
 title = Balo laptop | Túi chống sốc kháng nước tốt, mẫu mới cao cấp
-url = https://cellphones.com.vn/phu-kien/balo-tui-chong-soc-laptop.html
+url = https://cellphones.com.vn/phu-kien/balo-tui-chong-soc-laptop.html?srsltid=AfmBOorcLFwTfVjtz3sPFIw5TH-2l_gYgEhWCj4aPCgumbnpxHghGPSJ
 
 [www.diepxuan.com]
 match = 87.5%%
@@ -97,9 +97,9 @@ title = Cookie Policy
 url = https://www.mancity.com/cookie-policy
 
 [moveek.com]
-match = -175.0%%
-title = Rạp Cinestar Kiên Giang - Lịch chiếu, Giá vé, Ưu đãi
-url = https://moveek.com/rap/cinestar-kien-giang/
+match = -168.8%%
+title = Rạp Lotte Kosmo Tây Hồ - Lịch chiếu, Giá vé, Ưu đãi
+url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [midumenaq7.com]
 match = -175.0%%
