--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -32,9 +32,9 @@ title = Svara
 url = https://en.wikipedia.org/wiki/Svara
 
 [www.facebook.com]
-match = -84.6%%
-title = 3:16 Healthcare | Bremen GA
-url = https://www.facebook.com/316Healthcare/
+match = -61.5%%
+title = Northwest Georgia Scanner
+url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
 match = -269.2%%
@@ -42,9 +42,9 @@ title = MAC Powder Kiss: Lip Workshop with Sylvia Gani | MAC ...
 url = https://www.youtube.com/watch?v=2OJn1qtw3WY
 
 [www.regmovies.com]
-match = -215.4%%
-title = Regal Hollywood @ North I-85 Movie Tickets and ...
-url = https://www.regmovies.com/theatres/regal-hollywood-north-i-85-0745
+match = -223.1%%
+title = Regal Hollywood - Gainesville Movie Tickets and ...
+url = https://www.regmovies.com/theatres/regal-hollywood-cinemas-gainesville-1421
 
 [dds.georgia.gov]
 match = -284.6%%
