--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-10 00:49:07
 lastsearch = 2024-07-26 10:24:10
 
 [demtot.com]
-match = 4.8%%
-title = Tag Archives: đệm lò xo
-url = https://demtot.com/tag/dem-lo-xo/
+match = 45.0%%
+title = Đệm lò xo Dunlopillo
+url = https://demtot.com/dem-lo-xo-dunlopillo/
 
 [tuananh.vn]
 match = 52.4%%
@@ -57,9 +57,9 @@ title = Đệm lò xo Hàn Việt Hải giá rẻ
 url = https://demsingapore.com/dem-lo-xo-han-viet-hai.html
 
 [lombom.com]
-match = -119.0%%
-title = Nơi cung cấp nệm đệm lò xo cao cấp chính hãng tại Việt Nam!
-url = https://lombom.com/dem-lo-xo/
+match = -133.3%%
+title = Tổng kho nệm - đệm chính hãng khuyến mại 20-60%% Freeship!
+url = https://lombom.com/dem-nem/page/2/
 
 [www.linkedin.com]
 match = 4.8%%
