--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-26 05:15:25
+lastsearch = 2024-07-26 10:40:03
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -42,9 +42,9 @@ title = Recently Added Coins
 url = https://cryptoslate.com/recently-added-coins/
 
 [30rates.com]
-match = -125.0%%
-title = USD to PHP forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
+match = -120.0%%
+title = USD to MXN forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
 
 [www.akc.org]
 match = -45.0%%
@@ -82,9 +82,9 @@ title =
 url = https://www.icmec.org/wp-content/uploads/2019/01/ICMEC-South-Korea-National-Legislation-updated.pdf
 
 [cryptonews.com]
-match = -120.0%%
-title = Argentina OKs Registration of Company Using BTC as ...
-url = https://cryptonews.com/news/argentina-national-first-regulator-approves-registration-of-company-with-btc-usdc-capital.htm
+match = -135.0%%
+title = WazirX Preliminary Investigation Finds No Evidence of ...
+url = https://cryptonews.com/news/wazirx-preliminary-investigation-finds-no-evidence-of-compromised-signer-machines-in-235m-hack.htm
 
 [www.thespike.gg]
 match = -85.0%%
