--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-07-26 05:42:36
+lastsearch = 2024-07-26 10:31:13
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/list/giường xếp
 [sofatoanquoc.com]
 match = 30.0%%
 title = Giường ngủ bọc da mã 15
-url = https://sofatoanquoc.com/giuong-ngu-boc-da-ma-15.html
+url = https://sofatoanquoc.com/giuong-ngu-boc-da-ma-15.html?srsltid=AfmBOopAx9KLIeJNfuoLppzYIrjr5LhU3vqydvyYc6xXhW7V2zpiejUC
 
 [noithathoaphat360.com]
 match = -55.0%%
@@ -99,7 +99,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-ngu
 [everonvn.com.vn]
 match = -130.0%%
 title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường ...
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOooVB5_ZvvlhteF2YS84kI4ipA5yMzOXaWAi7-1LoRR7Aplu8cvf
 
 [noithatgiakhanh.net]
 match = -105.0%%
