CI images update

--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-26 05:13:25
+lastsearch = 2024-07-26 10:57:16
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,13 +17,13 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -300.0%%
-title = TUI Group – The one of the world's leading tourism groups
-url = https://www.tuigroup.com/en-en
+match = -250.0%%
+title = TUI brand name may no longer be used by TUI Russia
+url = https://www.tuigroup.com/en-en/media/press-releases/2022/2022-03-10-tui-terminates-agreement
 
 [www.tui.nl]
-match = -316.7%%
-title = 16-dg cruise Azië - Noordam (Rondreis) - Zuid-Korea - Japan
+match = -300.0%%
+title = 16-dg cruise Azië - Noordam (Rondreis) - Zuid-Korea - TUI
 url = https://www.tui.nl/16-dg-cruise-azie-noordam-519967721/
 
 [embraer.com]
@@ -107,9 +107,9 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -258.3%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
-url = https://www.tui.co.uk/
+match = -158.3%%
+title = Flights from Manchester Airport (MAN)
+url = https://www.tui.co.uk/flight/airports/manchester
 
 [maritime-executive.com]
 match = -316.7%%
