--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-26 00:50:28
+lastsearch = 2024-07-26 10:49:43
 
 [chanrathanhthuy.com]
 match = -3.2%%
@@ -12,14 +12,14 @@ title = Bí quyết chọn màu sắc chăn ga gối đệm hợp phong thủy
 url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-1400.html
 
 [demxanh.com]
-match = -12.9%%
-title = [HOT 2024] Top 20 chăn ga gối Singapore mà bạn không ...
-url = https://demxanh.com/top-20-chan-ga-goi-singapore-ma-ban-khong-the-bo-lo-nam-2020.html
+match = 32.3%%
+title = Chăn ga gối Singapore đệm tròn CIRCLE18
+url = https://demxanh.com/chan-ga-goi-singapore-dem-tron-circle18.html
 
 [songhongonline.vn]
-match = 53.8%%
-title = Bộ chăn ga gối SH_UT23 028
-url = https://songhongonline.vn/products/nhan-ban-tu-bo-chan-ga-goi-sh-ut23-032
+match = 8.7%%
+title = Bộ sản phẩm SH_BC22 057
+url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-057
 
 [changagoidemsonghong.com]
 match = -29.0%%
@@ -82,9 +82,9 @@ title = Bộ chăn ga gối Cotton sọc vuông hai lớp ZH6289
 url = https://flexhouse.vn/bọ-chan-ga-goi-cotton-soc-vuong-hai-lop-zh6289
 
 [changagoidemsonghong.online]
-match = 48.4%%
-title = Bộ chăn ga gối đệm giá bao nhiêu?
-url = https://changagoidemsonghong.online/bo-chan-ga-goi-dem-gia-bao-nhieu.html
+match = -22.6%%
+title = Những lưu ý cần nhớ khi chọn chăn ga gối Sông Hồng cưới
+url = https://changagoidemsonghong.online/nhung-luu-y-can-nho-khi-chon-chan-ga-goi-song-hong-cuoi.html
 
 [www.facebook.com]
 match = -6.5%%
