--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-26 10:22:47
+lastsearch = 2024-07-26 10:48:02
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -181.2%%
-title = Nghiện game và những hậu quả tới sức khỏe tâm thần | VTC14
-url = https://www.youtube.com/watch?v=iLJowXBsHNM
+match = -243.8%%
+title = Thị trường cà phê trong nước và thế giới biến động trái chiều ...
+url = https://www.youtube.com/watch?v=0vPz1cnaTNM
 
 [tuyensinh247.com]
 match = -225.0%%
@@ -460,4 +460,9 @@ url = https://baotintuc.vn/thoi-su/tao-dieu-kien-thuan-loi-de-nhan-dan-vao-vieng
 match = -256.2%%
 title = Thông tin lễ viếng, lễ truy điệu Tổng Bí thư Nguyễn Phú Trọng ...
 url = https://media.chinhphu.vn/thong-tin-le-vieng-le-truy-dieu-tong-bi-thu-nguyen-phu-trong-tai-que-nha-102240724151112475.htm
+
+[baochinhphu.vn]
+match = -112.5%%
+title = Cung thủ Lê Quốc Phong xếp hạng 47 vòng ...
+url = https://baochinhphu.vn/cung-thu-le-quoc-phong-xep-hang-47-vong-xep-hang-mon-ban-cung-tai-olympic-102240725235458908.htm
 
