--- a/images/nem-foam-dreamland-uc-180x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-180x200x20/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-180x200x20.html
 lastopen = 2024-06-07 00:24:18
 
 [search]
-lastsearch = 2024-07-26 04:28:38
+lastsearch = 2024-07-26 10:51:47
 
 [www.diepxuan.com]
 match = 40.6%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOopuXpJ9NwMh3-jlHQoMAssZF9ov1JT86zGTZTf8U6UQcvkVqdry
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [demxanh.com]
 match = -6.2%%
 title = Đệm bông ép Dreamland giá rẻ, chính hãng tại Hà Nội
-url = https://demxanh.com/dem-bong-ep-dreamland.html?srsltid=AfmBOooD7ywyUdX5hjvqIb-i5UhEp7AN-8cV387wHTIUI-ZuvwdW0bV1
+url = https://demxanh.com/dem-bong-ep-dreamland.html
 
 [changagoidemdep.vn]
 match = -12.5%%
