--- a/images/nem-foam-dreamland-uc-200x220x20/config.ini
+++ b/images/nem-foam-dreamland-uc-200x220x20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-200x220x20.html
 lastopen = 2024-06-07 00:49:31
 
 [search]
-lastsearch = 2024-07-26 05:14:05
+lastsearch = 2024-07-26 10:46:40
 
 [www.diepxuan.com]
 match = 31.2%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOoomZdy4luVx-mgiqb_EXjN19XhKXmcci5itdi25Te_cStjnKcn7
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [dreamfoambedding.com]
 match = -13.0%%
