--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-26 10:56:11
+lastsearch = 2024-07-26 11:31:44
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/hoangtuetam
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiUZLrD2z&sig=ACfU3U0unDo7aPQiHSb4U3MfjKgd321PHQ&hl=en&sa=X&ved=2ahUKEwj0hOfv58OHAxUWEFkFHVJhAdwQ6AF6BAgXEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiUZLtFXC&sig=ACfU3U1cB__q2yht73Idg4DI9pHj3NTISw&hl=en&sa=X&ved=2ahUKEwjmkfLo78OHAxWfM1kFHeb-BxAQ6AF6BAgbEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
