--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-26 05:27:08
+lastsearch = 2024-07-26 11:15:19
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -206.2%%
-title = Thị trường tiêu dùng ngày 25-7-2024 | Thị trường tiêu dùng
-url = https://www.youtube.com/watch?v=rT3TGv6yJcM
+match = -243.8%%
+title = Thị trường cà phê trong nước và thế giới biến động trái chiều ...
+url = https://www.youtube.com/watch?v=0vPz1cnaTNM
 
 [hawater.com.vn]
 match = -75.0%%
@@ -44,7 +44,7 @@ url = https://saigontourist.edu.vn/3899/718780821.phtml
 [www.vinmec.com]
 match = -81.2%%
 title = Hành vi thường gặp ở trẻ 16 tháng tuổi
-url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/nhi/hanh-vi-thuong-gap-o-tre-16-thang-tuoi/
+url = https://www.vinmec.com/vie/bai-viet/hanh-vi-thuong-gap-o-tre-16-thang-tuoi-vi
 
 [baomoi.com]
 match = -143.8%%
@@ -282,9 +282,9 @@ title = Xe máy bật đèn chiếu xa trong khu đông dân cư bị phạt ...
 url = https://vtcnews.vn/xe-may-bat-den-chieu-xa-trong-khu-dong-dan-cu-bi-phat-bao-nhieu-tien-ar879703.html
 
 [thoibaotaichinhvietnam.vn]
-match = -200.0%%
-title = Thị trường bất động sản cuối năm 2024: Giai đoạn thích ...
-url = https://thoibaotaichinhvietnam.vn/thi-truong-bat-dong-san-cuoi-nam-2024-giai-doan-thich-nghi-va-lam-quen-155266.html
+match = -225.0%%
+title = Ngày 26/7: Giá cà phê đảo chiều tăng, hồ tiêu ổn định, cao ...
+url = https://thoibaotaichinhvietnam.vn/ngay-267-gia-ca-phe-dao-chieu-tang-ho-tieu-on-dinh-cao-su-bien-dong-trai-chieu-155731.html
 
 [canbangdongclc.com]
 match = -75.0%%
@@ -635,4 +635,9 @@ url = https://media.chinhphu.vn/thong-tin-le-vieng-le-truy-dieu-tong-bi-thu-nguy
 match = -143.8%%
 title = LỜI CHÚA NGÀY MAI - BÀI ĐỌC & TIN MỪNG & SUY ...
 url = https://loichuahomnay.vn/loi-chua-ngay-mai
+
+[giaophanlongxuyen.org]
+match = 12.5%%
+title = Lời chúa mỗi ngày
+url = https://giaophanlongxuyen.org/chuyen-muc/loi-chua-moi-ngay
 
