CI images update

--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -666,3 +666,8 @@ match = -46.2%%
 title = CHURCH OF GOD
 url = https://digital.palni.edu/digital/api/collection/p15705coll53/id/3866/download
 
+[memberportal.nationalclub.org]
+match = 0.0%%
+title = 
+url = https://memberportal.nationalclub.org/news/491598/Connectedness-at-the-University-Club-of-Chicago.htm
+
