--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-07-26 11:21:36
+lastsearch = 2024-07-26 11:45:41
 
 [demxanh.com]
 match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+title = Thảm trải giường cao su non màu xanh nhạt
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -92,8 +92,8 @@ title = 120cm bed for 2 people? - Japan Forum
 url = https://www.tripadvisor.com/ShowTopic-g294232-i525-k6854499-120cm_bed_for_2_people-Japan.html
 
 [comehome.com.vn]
-match = -113.6%%
-title = TOP mẫu giường tầng cho bé trai, bé gái, giường tầng trẻ ...
+match = -40.9%%
+title = TOP mẫu giường tầng cho bé trai, bé gái ...
 url = https://comehome.com.vn/blog/post/mau-giuong-tang-cho-be
 
 [www.liena.com.vn]
