--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-26 06:52:22
+lastsearch = 2024-07-26 11:57:20
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -12,14 +12,14 @@ title = Everon EPT20041 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
 url = https://www.everonvn.vn/chi-tiet/Everon-EPT20041.html
 
 [everon.online]
-match = -53.6%%
-title = Tổng Đại Lý Chăn Ga Gối Đệm Everon Artemis King Koil
-url = https://everon.online/collections/dem-everon-kich-thuoc-1m4-140-190-140-200-140x190-140x200
+match = -21.4%%
+title = Chăn bốn mùa Everon chính hãng - Giảm giá tốt nhất
+url = https://everon.online/collections/chan-bon-mua-everon
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
+match = 3.6%%
+title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
 
 [demxanh.com]
 match = -32.1%%
@@ -32,14 +32,14 @@ title = Bộ chăn bốn mùa
 url = https://everonminhkhai.com/product-category/chan-ga-goi/bo-chan-ga/bo-chan-bon-mua/
 
 [everonvn.com.vn]
-match = -32.1%%
-title = Đệm Bông Ép Vỏ Gấm Everon Giảm 20%% Hàng Chính Hãng
-url = https://everonvn.com.vn/everon/77/dem-bong-ep-everon
+match = 10.7%%
+title = Bảng giá bán lẻ chăn bốn mùa Everon
+url = https://everonvn.com.vn/51/chan-bon-mua-everon
 
 [changagoidemsonghong.com]
 match = -53.6%%
-title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22062
-url = https://changagoidemsonghong.com/chan-ga-goi-khong-chan-bc62
+title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22052
+url = https://changagoidemsonghong.com/chan-ga-goi-khong-chan-bc52
 
 [songhong.info]
 match = -53.6%%
