--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-26 10:29:55
+lastsearch = 2024-07-26 11:43:58
 
 [www.diepxuan.com]
 match = 19.0%%
 title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html?srsltid=AfmBOoqx5ccBKlNRAm8OH5qXjFc-OadPnAf7uTZ8smfb7K7_tMGQzM3l
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [noithatdaithanh.vn]
 match = -47.6%%
@@ -72,9 +72,9 @@ title = Đài Loan – Wikipedia tiếng Việt
 url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [www.roc-taiwan.org]
-match = -114.3%%
-title = Hộ chiếu - Văn phòng Kinh tế và Văn hóa Đài Bắc tại Việt ...
-url = https://www.roc-taiwan.org/vn_vi/cat/9.html
+match = -76.2%%
+title = Văn phòng Kinh tế và Văn hóa Đài Bắc tại Việt Nam
+url = https://www.roc-taiwan.org/vn_vi/index.html
 
 [zh.wikipedia.org]
 match = -9.5%%
@@ -87,9 +87,9 @@ title = Top 10 Rạp chiếu phim ở Đài Bắc - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attractions-g293913-Activities-c56-t97-Taipei.html
 
 [www.facebook.com]
-match = -100.0%%
-title = Trấn Thành - Lịch chiếu MAI ở Đài Loan nha!!! Cả nhà cập...
-url = https://www.facebook.com/tran.thanh.ne/posts/lịch-chiếu-mai-ở-đài-loan-nha-cả-nhà-cập-nhật-để-đi-xem-cho-dễ-ạh-ra-rạp-thôi-đà/1026713498818919/
+match = -181.0%%
+title = 20240416 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞 ...
+url = https://www.facebook.com/ptsvietnamesenews/videos/20240416-bản-tin-tiếng-việt-pts-đài-loan-公視越南語新聞/452366227450173/
 
 [cau-ca.com]
 match = -42.9%%
@@ -200,4 +200,9 @@ url = https://www.klook.com/vi/blog/canh-dep-dai-loan/
 match = -71.4%%
 title = ĐÀI LOAN 5N4Đ | ĐÀI BẮC – ĐÀI TRUNG – CAO HÙNG
 url = https://www.luavietours.com/du-lich/du-lich-nuoc-ngoai/chau-a/dai-loan/dai-loan-5n4d-dai-bac-dai-trung-cao-hung-2/
+
+[benthanhtourist.com]
+match = -95.2%%
+title = Đài Bắc - Làng Cầu Vòng - Cao Hùng (Tour tiết kiệm)
+url = https://benthanhtourist.com/tour/du-lich-dai-loan-dai-bac-dai-trung-lang-cau-vong-cao-hung
 
