--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-07-26 05:18:32
+lastsearch = 2024-07-26 11:52:09
 
 [chieutrelanlan.com]
 match = -7.1%%
@@ -42,9 +42,9 @@ title = Chiếu Tre Lan Lan | Ho Chi Minh City
 url = https://www.facebook.com/chieutruclanlan/
 
 [tiki.vn]
-match = -42.9%%
-title = Chiếu trúc hạt hàng chính hãng, giao nhanh - Tháng 7, 2024
-url = https://tiki.vn/search?q=chiếu trúc hạt
+match = 34.6%%
+title = Mua Chiếu trúc hạt Quế Lâm
+url = https://tiki.vn/chieu-truc-hat-que-lam-p87383232.html?spid=170118061/
 
 [www.sendo.vn]
 match = -14.3%%
