--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-26 10:17:37
+lastsearch = 2024-07-26 11:48:03
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -595,4 +595,9 @@ url = https://www.cancer.gov/about-cancer/causes-prevention/risk/radiation/elect
 match = -246.2%%
 title = Engineered Regenerative Isolated Peripheral Nerve ...
 url = https://onlinelibrary.wiley.com/doi/full/10.1002/adma.202406652
+
+[www.ccboe.net]
+match = -92.3%%
+title = Columbia County School District
+url = https://www.ccboe.net/
 
