--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-26 06:17:34
+lastsearch = 2024-07-26 11:49:27
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Luật Di trú và Cuộc sống Mỹ | BỊ THU HỒI THẺ XANH KHI ..
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -200.0%%
-title = FIX: VIDEO DXGKRNL FATAL ERROR in Windows 10/11 ...
-url = https://www.youtube.com/watch?v=7yEnuxJqQKg
+match = -250.0%%
+title = Low-budget GREEN SCREEN at home | What gives the best ...
+url = https://www.youtube.com/watch?v=axwpepx1FTw
 
 [www.reddit.com]
 match = -64.3%%
@@ -29,12 +29,12 @@ url = https://www.reddit.com/r/VietNam/comments/18zushv/why_are_xanh_sm_drivers_
 [demxanh.com]
 match = 28.6%%
 title = Màn chụp giá rẻ
-url = https://demxanh.com/man-chup-gia-re.html?srsltid=AfmBOopVv_V0MMCAHzTnohIgVO8A5VT8HE6L8wFUKUtN-4zqL5Wus7D6
+url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -7.1%%
-title = Explore my Options
-url = https://www.uscis.gov/forms/explore-my-options
+match = -64.3%%
+title = I am Married to a U.S. Citizen
+url = https://www.uscis.gov/citizenship/learn-about-citizenship/citizenship-and-naturalization/i-am-married-to-a-us-citizen
 
 [www.evergreenrecreation.com]
 match = -157.1%%
