--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-07-26 04:34:49
+lastsearch = 2024-07-26 12:25:47
 
 [www.lazada.vn]
 match = -17.4%%
 title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.6 m x 2 m
-url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html
+url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html?srsltid=AfmBOopmw_7XBuXrbkV_aDLMMV6TLruATNZVaGeSoTxTUNzGJLd4E9v6
 
 [www.facebook.com]
 match = 52.2%%
 title = Chiếu Nhựa Thái Bình | Thanh Hóa
-url = https://www.facebook.com/chieunhuathaibinh/
+url = https://www.facebook.com/chieunhuathaibinh/?locale=hr_HR
 
 [www.sendo.vn]
-match = -34.8%%
-title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
-url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
+match = 34.8%%
+title = Chiếu nhựa thái bình 1m x 1m9 - chieu
+url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m-x-1m9-43896854.html
 
 [shopee.vn]
 match = -78.3%%
@@ -74,7 +74,7 @@ url = https://www.tonpvc.com/thai-binh-gia-ban-le-ngoi-nhua-asa-pvc-04-lop/
 [www.diepxuan.com]
 match = 13.0%%
 title = Chiếu nhựa Thái Bình GT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-160x200.html
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-160x200.html?srsltid=AfmBOorbOXhvYavZ0JTvvEgykI3j1u_igrqIe8BhJEGUMtJ2XJeCZIZt
 
 [h5.lazada.vn]
 match = -17.4%%
