--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-26 05:01:20
+lastsearch = 2024-07-26 12:19:38
 
 [www.gov.uk]
 match = -200.0%%
@@ -97,8 +97,8 @@ title =
 url = https://austinimmigrationattorney.com/practice-areas/family-immigration/stepchild-petition-form-i-130/
 
 [www.consolidatedtheatres.com]
-match = -120.0%%
-title = Movie Information | Tickets | Showtimes
+match = -126.7%%
+title = Movie Information | Tickets | Showtimes |
 url = https://www.consolidatedtheatres.com/
 
 [www.bkfc.com]
@@ -184,7 +184,7 @@ url = https://www.premierleague.com/
 [books.google.com]
 match = -260.0%%
 title = Department of the Army Pamphlet - Page 153 - Google Books Result
-url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+trang+16&source=bl&ots=luPmALFURf&sig=ACfU3U1BTlvA5x-vMvfkztqqKaziOEwJ-w&hl=en&sa=X&ved=2ahUKEwjT7N-nusKHAxWOCnkGHZFEA_YQ6AF6BAgjEAM
+url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+trang+16&source=bl&ots=luPmARxQQn&sig=ACfU3U3HPMNB1K5F--Y4LrTiADYLD0hNYA&hl=en&sa=X&ved=2ahUKEwjEwrjD-sOHAxU0MVkFHb40NPIQ6AF6BAglEAM
 
 [www.nolo.com]
 match = 0.0%%
