--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da-dai.html
 lastopen = 2024-06-07 00:36:57
 
 [search]
-lastsearch = 2024-07-26 11:52:49
+lastsearch = 2024-07-26 12:28:14
 
 [shopee.vn]
 match = -126.7%%
@@ -12,9 +12,9 @@ title = thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm trải ghế
 
 [ghedagiago.com]
-match = -133.3%%
-title = 55+ MẪU GIÁ BÀN GHẾ ĐÁ GIẢ GỖ RẺ ĐẸP NHẤT 2024
-url = https://ghedagiago.com/danh-muc/ban-ghe-da-gia-go/
+match = -146.7%%
+title = TOP 45 MẪU GHẾ ĐÁ CÔNG VIÊN GIÁ TỐT TẠI XƯỞNG ...
+url = https://ghedagiago.com/danh-muc/ghe-da-cong-vien/
 
 [ghedatruongan.com]
 match = -80.0%%
@@ -32,9 +32,9 @@ title = 30+ Mẫu Ghế Gỗ Da Đẹp Cho Không Gian Bài Trí Sang ...
 url = https://anmoc.vn/blogs/news/ghe-go-da
 
 [ghedamienbac.com]
-match = -120.0%%
-title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
-url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
+match = -133.3%%
+title = Cung Cấp Bàn Ghế Đá Miền Bắc Giá Rẻ,Mẫu Mã Đẹp
+url = https://ghedamienbac.com/ban-ghe-da/
 
 [bangheda.info]
 match = -140.0%%
