--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-26 11:18:32
+lastsearch = 2024-07-26 12:52:00
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -107,9 +107,9 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -258.3%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
-url = https://www.tui.co.uk/
+match = -41.7%%
+title = Find & Book Flights
+url = https://www.tui.co.uk/flight/
 
 [maritime-executive.com]
 match = -316.7%%
@@ -460,4 +460,9 @@ url = https://www.prnewswire.com/news-releases/tui-hotels--resorts-taps-canary-t
 match = -308.3%%
 title = Airbus, Tata Advanced Systems Formalise Contract for ...
 url = https://www.asdnews.com/news/aerospace/2024/07/24/airbus-tata-advanced-systems-formalise-contract-h125-helicopter-final-assembly-line-india
+
+[www.pbshawaii.org]
+match = -22.2%%
+title = John Cruz
+url = https://www.pbshawaii.org/wp-content/uploads/2024/07/PBSHI-PG_AUG24-Web_05.pdf
 
