--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-26 06:57:11
+lastsearch = 2024-07-26 12:47:04
 
 [tiki.vn]
 match = 16.0%%
@@ -17,9 +17,9 @@ title = Phim MAI của Trấn Thành sẽ được khởi chiếu tại Đài Lo
 url = https://www.tiktok.com/@danghoaly86/video/7348795087473609989
 
 [shopee.vn]
-match = -8.0%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -28.0%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [congly.vn]
 match = 0.0%%
@@ -27,14 +27,14 @@ title = sitemap-article-2022-10-12.xml
 url = https://congly.vn/sitemap-article-2022-10-12.xml
 
 [www.facebook.com]
-match = -60.0%%
-title = Du lịch tự do Đài Loan | Ngày 12 tháng 4 phim Mai của ...
-url = https://www.facebook.com/groups/867394263291528/posts/ngày-12-tháng-4-phim-mai-của-trấn-thành-sẽ-được-công-chiếu-toàn-đài-loan-với-tiê/7807974442566774/
+match = -124.0%%
+title = 20231212 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞 ...
+url = https://www.facebook.com/ptsvietnamesenews/videos/20231212-bản-tin-tiếng-việt-pts-đài-loan-公視越南語新聞/1378308362826085/
 
 [vi.wikipedia.org]
-match = 6.7%%
-title = Địa lý Đài Loan
-url = https://vi.wikipedia.org/wiki/Địa_lý_Đài_Loan
+match = -4.0%%
+title = Đài Loan – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [www.roc-taiwan.org]
 match = -72.0%%
@@ -47,9 +47,9 @@ title = Những Bài Văn Lớp 12 Hay Thi (Tập 1) - Google Books Result
 url = https://books.google.com/books?id=zeMGEQAAQBAJ&pg=PT255&lpg=PT255&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=5HmFGxZYvE&sig=ACfU3U2PYiN6tuX8_7-Nz3EaJoNB-Jdgdw&hl=en&sa=X&ved=2ahUKEwiUpL_PoMOHAxWbq4kEHVq1A_wQ6AF6BAgdEAM
 
 [www.skyscanner.com.vn]
-match = -52.0%%
-title = Vé máy bay giá rẻ từ Chicago đến Đài Loan - Skyscanner
-url = https://www.skyscanner.com.vn/routes/chia/tw/chicago-to-đai-loan.html
+match = -48.0%%
+title = Vé máy bay giá rẻ từ Hoa Kỳ đến Đài Loan - Skyscanner
+url = https://www.skyscanner.com.vn/routes/us/tw/hoa-ky-to-đai-loan.html
 
 [www.bestprice.vn]
 match = -64.0%%
@@ -67,9 +67,9 @@ title = Phim Đài Loan
 url = https://tvmotchill.com/quoc-gia/phim-dai-loan/
 
 [www.youtube.com]
-match = -56.0%%
-title = "SỐC" VỚI 12 SỰ THẬT THÚ VỊ VỀ ĐÀI LOAN | Cách Trung ...
-url = https://www.youtube.com/watch?v=DWqUd9AkeCo
+match = -88.0%%
+title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 12 | Trọn Bộ Phim ...
+url = https://www.youtube.com/watch?v=Qzd1oRmbvFM
 
 [znews.vn]
 match = -40.0%%
