--- a/images/nem-di-a-mon-9f-2m-22-re/config.ini
+++ b/images/nem-di-a-mon-9f-2m-22-re/config.ini
@@ -52,9 +52,9 @@ title = Dua Lipa - Let's Get Physical Work Out (Official Video)
 url = https://www.youtube.com/watch?v=YvVonQ7LUJ0
 
 [books.google.com]
-match = -58.3%%
-title = The Art Journal - Volume 61 - Google Books Result
-url = https://books.google.com/books?id=oxzRSm8jdgMC&pg=PT39&lpg=PT39&dq=nem+di+a+mon+9f+2m+22+re&source=bl&ots=0TmBMY_1Yl&sig=ACfU3U3jLycrMdZ5nRt6BvRs6TrrmEJGCg&hl=en&sa=X&ved=2ahUKEwiJqOrI58OHAxWBFmIAHWhmAyoQ6AF6BAgeEAM
+match = -91.7%%
+title = Wind and Seismic Effects: Proceedings of the 23rd Joint ...
+url = https://books.google.com/books?id=zO5SJiQTEJkC&pg=PA260&lpg=PA260&dq=nem+di+a+mon+9f+2m+22+re&source=bl&ots=vWi9q5GYj3&sig=ACfU3U2Ke7CMRCZ_jiPNI9C4EIWWU9DTyw&hl=en&sa=X&ved=2ahUKEwi8jbr0gcSHAxWHElkFHY1iChQQ6AF6BAgeEAM
 
 [www.kvaser.cn]
 match = 9.1%%
@@ -197,8 +197,8 @@ title = NEM | May was all vibes and smiles
 url = https://www.instagram.com/nemsongs/p/C8n36jgRTi1/?locale=en_CA
 
 [erdc-library.erdc.dren.mil]
-match = -108.3%%
-title = CRREL Report 82-34, Hydraulic Model Study of Port Huron Ice ...
+match = -95.8%%
+title = CRREL Report 82-34, Hydraulic Model Study of Port Huron ...
 url = https://erdc-library.erdc.dren.mil/jspui/bitstream/11681/9331/1/CR-82-34.pdf
 
 [support.rockstargames.com]
