--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-07-26 06:31:28
+lastsearch = 2024-07-26 12:53:02
 
 [everonvn.com.vn]
 match = -12.5%%
@@ -17,9 +17,9 @@ title = Tấm trải - Topper
 url = https://everonthaiha.com/nhom-san-pham/309/tam-trai-topper.html
 
 [kbedding.vn]
-match = -41.7%%
-title = Tấm trải tiện ích Everon Lite (giao màu ngẫu nhiên)
-url = https://kbedding.vn/product/tam-trai-tien-ich-microfiber-everon-lite/
+match = -54.2%%
+title = Tấm Topper Xanh Lá Everon Lite ELM203-1 - K-Bedding
+url = https://kbedding.vn/product/tam-topper-xanh-la-everon-lite-elm203-1/
 
 [everon.online]
 match = -8.3%%
@@ -27,9 +27,9 @@ title = Topper Everon - Tấm Tăng Tiện Nghi
 url = https://everon.online/collections/topper-tam-tang-tien-nghi
 
 [www.lazada.vn]
-match = 0.0%%
-title = Tấm Trải đa Năng Everon Giá Tốt T06/2024
-url = https://www.lazada.vn/tag/tam-trai-da-nang-everon/
+match = -66.7%%
+title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/tam-trai-everon/
 
 [www.everonvn.vn]
 match = -20.8%%
@@ -94,7 +94,7 @@ url = https://khonemtonghop.com/topper-nem-everon/
 [aeoneshop.com]
 match = -33.3%%
 title = Mua Everon Tấm Topper Lite 180x200cm ELM203-1
-url = https://aeoneshop.com/product/10675/tam-topper-lite-180x200cm-elm203-1?srsltid=AfmBOooO4zzlFP_X0w-XLaupx21cExZGBJN4M8fxdarshTErvREqj2JR
+url = https://aeoneshop.com/product/10675/tam-topper-lite-180x200cm-elm203-1
 
 [dailynem.vn]
 match = 40.0%%
