--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-26 12:24:49
+lastsearch = 2024-07-26 12:47:27
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -25.0%%
-title = Simple Xiangling Build
-url = https://www.tiktok.com/discover/simple-xiangling-build
+match = -6.2%%
+title = Dvorak Genshin Bpc
+url = https://www.tiktok.com/discover/dvorak-genshin-bpc?lang=en
 
 [www.diepxuan.com]
 match = -162.5%%
@@ -37,9 +37,9 @@ title = Điệp Xuân Chăn ga gối đệm Điệp Xuân
 url = https://diepxuan.com/
 
 [www.facebook.com]
-match = -68.8%%
-title = Siaran Chăn ga gối đệm Điệp Xuân
-url = https://www.facebook.com/diepxuanco/posts/4840270546027657/?locale=ms_MY
+match = -143.8%%
+title = Tiếp tục những cung đường... #thixagiarai ...
+url = https://www.facebook.com/thixaGiaRaiBL/videos/tiếp-tục-những-cung-đường-thixagiarai-giaraiquehuongtoi/433333748972674/
 
 [www.griffingouldwebsite.com]
 match = -43.8%%
