CI images update

--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-07-26 12:23:26
+lastsearch = 2024-07-26 13:18:42
 
 [demxanh.com]
 match = -3.3%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOorMyAXd4IQxDEy1BTVKCuSbzYTpArOtDhuOWfT698DsIdn_OFw7
 
 [suongtuyet.com]
 match = -13.3%%
