--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-26 09:04:41
+lastsearch = 2024-07-26 13:18:23
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -45.5%%
-title = Kristi Noem
-url = https://en.wikipedia.org/wiki/Kristi_Noem
+match = -60.0%%
+title = United States biological weapons program
+url = https://en.wikipedia.org/wiki/United_States_biological_weapons_program
 
 [www.facebook.com]
 match = -160.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -160.0%%
-title = S. Korean vice foreign minister holds bilateral meetings at ...
-url = https://en.yna.co.kr/view/AEN20171121002500315
+match = -105.0%%
+title = (EDITORIAL from Korea JoongAng Daily on April 6) ...
+url = https://en.yna.co.kr/view/AEN20180406000600320
 
 [www.vlr.gg]
 match = 5.6%%
@@ -375,4 +375,14 @@ url = https://jhc-tkd.com/counting-in-korean/
 match = -70.0%%
 title = CNN: Breaking News, Latest News and Videos
 url = https://edition.cnn.com/
+
+[additioapp.com]
+match = 0.0%%
+title = 
+url = https://additioapp.com/en/the-5-keys-of-south-koreas-education-system/
+
+[www.iswresearch.org]
+match = -105.0%%
+title = Russian Offensive Campaign Assessment, April 26, 2024
+url = https://www.iswresearch.org/2024/04/russian-offensive-campaign-assessment_26.html
 
