--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-26 08:09:56
+lastsearch = 2024-07-26 13:19:41
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -42,9 +42,9 @@ title = Ga chun tiện lợi và thoáng mát, chính hãng giảm 15%%
 url = https://nemhana.com/ga-chun/
 
 [demxanh.com]
-match = -8.0%%
-title = Bộ ga chun Cotton chống thấm màu ghi nhạt
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
+match = 4.0%%
+title = Bộ ga chun Cotton chống thấm màu trắng
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-trang.html
 
 [www.lazada.vn]
 match = 0.0%%
