--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-26 10:37:21
+lastsearch = 2024-07-26 13:20:03
 
 [www.tiktok.com]
-match = -193.8%%
-title = Wendy Dodo Sugar Box opening . . . #wendydodosugar ...
-url = https://www.tiktok.com/@unboxing_serotonin/video/7252768147143462186
+match = 0.0%%
+title = Huda Beauty Vitamin C
+url = https://www.tiktok.com/discover/huda-beauty-vitamin-c
 
 [digitalmaine.com]
 match = -75.0%%
