--- a/images/nem-sieu-nhe-5f-14/config.ini
+++ b/images/nem-sieu-nhe-5f-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-5f-14.html
 lastopen = 2024-06-09 23:19:00
 
 [search]
-lastsearch = 2024-07-26 12:40:53
+lastsearch = 2024-07-26 13:47:31
 
 [tuhung.net]
-match = -77.8%%
-title = Lưu trữ Nệm PE Hàn Quốc - Nội Thất Tứ Hưng
-url = https://tuhung.net/danh-muc-san-pham/nem-pe-han-quoc/
+match = -83.3%%
+title = Nệm (Đệm) PE Hàn Quốc rộng 1M dày 7F NPETH-04
+url = https://tuhung.net/san-pham/nem-pe-han-quoc-rong-1m-x-dai-2m-x-day-10f/
 
 [shopee.vn]
 match = -122.2%%
@@ -22,9 +22,9 @@ title = Nên chọn nệm cao su nào phù hợp với người lớn tuổi
 url = https://congtynemthangloi.com.vn/nen-chon-nem-cao-su-nao-phu-hop-voi-nguoi-lon-tuoi
 
 [www.instagram.com]
-match = -155.6%%
-title = 𝗡𝗘𝗠 𝗖𝗔𝗬 𝗧𝗢̉𝗜 𝗢̛́𝗧 E gây nghiện thành công cho nhiều khách ...
-url = https://www.instagram.com/minhhong91/p/C6nc_O_pRku/
+match = -77.8%%
+title = Instagram
+url = https://www.instagram.com/minhhong91/p/B_mece0pkRv/
 
 [www.sec.gov]
 match = -27.8%%
@@ -54,7 +54,7 @@ url = https://sieuthicholon.com/tag/nem-topper-foam-ti/?trang=14
 [www.diepxuan.com]
 match = -7.7%%
 title = Điệp Xuân Nệm
-url = https://www.diepxuan.com/catalog/category/view/s/nem/id/773/?srsltid=AfmBOooclsFVvdr3r6o5GzOjmhZt0NSrcRrjgNCHG2Sf4wacen7lKWgM
+url = https://www.diepxuan.com/catalog/category/view/s/nem/id/773/
 
 [m.facebook.com]
 match = -122.2%%
@@ -74,7 +74,7 @@ url = https://thitruongsi.com/nem-gap-3-pe-1m4x2mx10cm-791131.html
 [vuanem.com]
 match = -150.0%%
 title = Vua Nệm - Hệ Thống Bán Lẻ Nệm & Chăn Ga Gối Đệm Toàn ...
-url = https://vuanem.com/?srsltid=AfmBOopg-BjVcbf2tD1aT6HruXLcz3DQTZYGPuGJUmU_oDqPhdgXjBLR
+url = https://vuanem.com/
 
 [www.amazon.com]
 match = -77.8%%
@@ -115,4 +115,9 @@ url = https://tunhuadalat.com/san-pham/nem-sieu-nhe-5-phan.html
 match = -150.0%%
 title = 150+ Tên Ở Nhà Cho Bé Trai Hay, Độc, Lạ, Dễ Nuôi 2024
 url = https://tiki.vn/blog/ten-o-nha-cho-be-trai/
+
+[baochi.nlv.gov.vn]
+match = -155.6%%
+title = Page 4 Advertisements Column 1 — Hà Thành ngọ báo 21 ...
+url = http://baochi.nlv.gov.vn/baochi/cgi-bin/baochi?a=d&d=Rhc19331121.2.22.1&e=-------vi-20--1--txt-IN------
 
