--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-07-26 12:16:30
+lastsearch = 2024-07-26 13:49:35
 
 [noithathomy.com]
 match = -42.9%%
@@ -17,14 +17,14 @@ title = Tặng Thảm Lau Chân - 100 Mẫu Thảm 2m x 3m Thảm Nỉ ...
 url = https://shopee.vn/Tặng-Thảm-Lau-Chân-100-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.22156385.4432151796
 
 [www.lazada.vn]
-match = -104.8%%
-title = ( TẶNG THẢM CHÂN ) Thảm nỉ trải sàn phòng khách [ 2m x ...
-url = https://www.lazada.vn/products/tang-tham-chan-tham-ni-trai-san-phong-khach-2m-x-3m-va-2m3-x-16m-tham-bali-sang-trong-hon-tham-long-tham-trai-san-balitham-trang-tri-phong-nguphong-khach-da-dang-mau-mahang-san-tham-ni-i408728790.html
+match = -42.9%%
+title = Thảm Trải Sàn Nhà 2m X 3m Giá Tốt T05/2024
+url = https://www.lazada.vn/tag/tham-trai-san-nha-2m-x-3m/
 
 [tiki.vn]
-match = -128.6%%
-title = Thảm trải sàn, thảm lì Bali, thảm trang trí phòng khách 2m x ...
-url = https://tiki.vn/tham-trai-san-tham-li-bali-tham-trang-tri-phong-khach-2m-x-3m-p76292949.html
+match = -9.5%%
+title = Mua Thảm trải sàn Bali 2m*3m nhiều mẫu
+url = https://tiki.vn/thanh-ly-tham-trai-san-bali-2m-3m-gia-449k-nhieu-mau-p143200696.html
 
 [muachunghaiphong.com]
 match = 0.0%%
