--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-07-26 11:39:00
+lastsearch = 2024-07-26 13:52:00
 
 [thamaulac.com.vn]
-match = -22.2%%
-title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
-url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
+match = -88.9%%
+title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
+url = https://thamaulac.com.vn/
 
 [xoptraisan.info]
-match = -172.2%%
-title = Thảm xốp trải sàn 60x60 họa tiết tranh giao thông cao cấp ...
-url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
+match = 22.2%%
+title = Thảm nỉ ghép Tường Lâm 60×60
+url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
 
 [thamvinhthuan.com]
 match = 16.7%%
@@ -27,14 +27,14 @@ title = Thảm Trải Sàn TPHCM - THẢM XỐP MÀU 60X60X1.2CM
 url = http://trieuchau.com/en-us/1057/27906/Tham-xop-60x60cm/THAM-XOP-MAU-60X60X12CM
 
 [shopee.vn]
-match = -111.1%%
-title = thảm ghép 60x60cm giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
+match = -138.9%%
+title = Thảm xốp trải sàn - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/thảm xốp/trải sàn
 
 [vatlieulotsan.com]
-match = -27.8%%
-title = Thảm Xốp 60 × 60 Cm Một Màu Vân Caro
-url = https://vatlieulotsan.com/tham-xop-60-x-60-cm-mot-mau-van-caro/
+match = -83.3%%
+title = Thảm Xốp Mặt Nỉ - Kho Vật Liệu Trải Sàn TPHCM
+url = https://vatlieulotsan.com/danh-muc-san-pham/tham-xop/tham-xop-mat-ni/
 
 [thamtuonglam.vn]
 match = 21.4%%
@@ -57,9 +57,9 @@ title = Thảm xốp trơn đơn màu 60x60
 url = https://thamht.vn/products/tham-lot-tre-nam-choi
 
 [tiki.vn]
-match = -127.8%%
-title = Mua 10 tấm xốp ghép, mặt thảm nỉ kích thước 60cm x ...
-url = https://tiki.vn/10-tam-xop-ghep-mat-tham-ni-kich-thuoc-60cm-x-60cm-x-0-6cm-tam-mau-xam-p74677292.html?spid=74677292
+match = -111.1%%
+title = Thảm xốp lót sàn 60x60 hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm xốp lót sàn 60x60
 
 [thamtretho.com]
 match = -66.7%%
@@ -75,4 +75,9 @@ url = https://www.pinterest.com/pin/763993524284509627/
 match = -11.1%%
 title = Thảm Xốp Ghép Trải Sàn | Hanoi
 url = https://www.facebook.com/xoptraisan/
+
+[lombom.com]
+match = -144.4%%
+title = Thảm nỉ ghép trản sàn nhà Tường Lâm cao cấp - Lombomshop!
+url = https://lombom.com/tham-ni-ghep-san-nha/
 
