CI images update

--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-26 12:19:38
+lastsearch = 2024-07-26 14:00:57
 
 [www.gov.uk]
 match = -200.0%%
@@ -184,7 +184,7 @@ url = https://www.premierleague.com/
 [books.google.com]
 match = -260.0%%
 title = Department of the Army Pamphlet - Page 153 - Google Books Result
-url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+trang+16&source=bl&ots=luPmARxQQn&sig=ACfU3U3HPMNB1K5F--Y4LrTiADYLD0hNYA&hl=en&sa=X&ved=2ahUKEwjEwrjD-sOHAxU0MVkFHb40NPIQ6AF6BAglEAM
+url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+trang+16&source=bl&ots=luPmARDROm&sig=ACfU3U3LGXLY6-Dr747HCgyxX1e1I2eVOA&hl=en&sa=X&ved=2ahUKEwilyp2WkcSHAxVWEFkFHWsfF9AQ6AF6BAgjEAM
 
 [www.nolo.com]
 match = 0.0%%
