--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-07-26 11:19:12
+lastsearch = 2024-07-26 13:49:58
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -12,8 +12,8 @@ title = Bộ ga chun My Youth - MY14
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my14/
 
 [www.diepxuan.com]
-match = -4.8%%
-title = Điệp Xuân Bộ chăn ga gối màu xoa tin 14
+match = -14.3%%
+title = Bộ chăn ga gối màu xoa tin 14 - Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html
 
 [lasantevn.com]
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối Everon Lite EVE14
 url = https://everonletrongtan.com/bo-chan-ga-goi-everon-lite-eve14
 
 [foreverbedding.net]
-match = -66.7%%
-title = Bộ ga chun chần mặt Elegant H140 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-elegant-h140
+match = -33.3%%
+title = Bộ ga chun Velina V14 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-velina-v14
 
 [changmibedding.com]
 match = -33.3%%
