--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-26 10:20:23
+lastsearch = 2024-07-26 13:59:35
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -23,8 +23,8 @@ url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m co
 
 [changagoidemsonghong.com]
 match = -14.3%%
-title = Chăn ga gối Home mã H18-056 Sale 40%%
-url = https://changagoidemsonghong.com/chan-ga-goi-home-h18-056
+title = Bộ chăn ga gối Walt Disney mã BY20001
+url = https://changagoidemsonghong.com/chan-ga-goi-by20001
 
 [demsonghonghanoi.com]
 match = -14.3%%
