--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-07-26 12:46:22
+lastsearch = 2024-07-26 13:53:03
 
 [www.muji.com]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = Chăn lông cừu Muji thương hiệu số 1 Nhật Bản - Coda
 url = https://coda.io/@hoang-quang-tuyen/chan-long-cuu-muji-thuong-hieu-so-1-nhat-ban
 
 [shopee.vn]
-match = -135.7%%
-title = CHĂN LÔNG TUYẾT MUJI XUẤT NHẬT SIÊU MỀM MỊN ...
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-MUJI-XUẤT-NHẬT-SIÊU-MỀM-MỊN-KÍCH-THƯỚC-2M*2M3-i.207051295.4759765140
+match = 28.6%%
+title = Chăn Lông Nhung Xám MUJI
+url = https://shopee.vn/Chăn-Lông-Nhung-Xám-MUJI-i.601622525.12174454922
 
 [changagoidemdep.vn]
 match = 35.7%%
@@ -102,9 +102,9 @@ title = Chăn Lông Muji
 url = https://www.tiktok.com/discover/Chăn-lông-muji
 
 [www.lazada.vn]
-match = -207.1%%
-title = Chăn lông tuyết MUJI xuất Nhật đủ màu 1,8kg - Hàng loại 1
-url = https://www.lazada.vn/products/chan-long-tuyet-muji-xuat-nhat-du-mau-18kg-hang-loai-1-i859404971.html
+match = -62.5%%
+title = Untitled
+url = https://www.lazada.vn/tag/chan-long-muji/
 
 [sugoimart.com]
 match = -257.1%%
