--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -32,9 +32,9 @@ title = Chiếu Cói Thái Bình Rẻ Nhất Hà Nội
 url = https://www.facebook.com/chieucoithaibinhrenhathanoi/
 
 [www.sendo.vn]
-match = 24.1%%
-title = Chiếu Nhựa Bền Đẹp, Giá Sốc, Bán Chạy Nhất
-url = https://www.sendo.vn/chieu-nhua.htm
+match = 0.0%%
+title = Chiếu Nhựa Thái Lan Hàng Xịn, Giá Xuất Xưởng, Với ...
+url = https://www.sendo.vn/chieu-nhua-thai-lan.htm
 
 [chieuvietbac.blogspot.com]
 match = -20.7%%
