--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-26 12:56:06
+lastsearch = 2024-07-26 13:51:20
 
 [burningman.org]
-match = 0.0%%
-title = 
+match = -60.0%%
+title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.usatoday.com]
@@ -1040,4 +1040,9 @@ url = https://www.dmns.org/
 match = -180.0%%
 title = World Resources Institute | Making Big Ideas Happen
 url = https://www.wri.org/
+
+[translate.google.com]
+match = 33.3%%
+title = Google Translate
+url = https://translate.google.com/
 
