--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-26 06:16:51
+lastsearch = 2024-07-26 13:53:45
 
 [shopee.vn]
 match = -87.5%%
@@ -49,7 +49,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 [www.lazada.vn]
 match = -70.8%%
 title = Thảm chùi chân,LEN MỊN thảm lau chân chống trơn trượt ...
-url = https://www.lazada.vn/products/tham-chui-chanlen-min-tham-lau-chan-chong-tron-truot-hang-cao-cap-mau-moi-40-60cm-i1342643160.html?srsltid=AfmBOooV7T4mxxJ5ZzoqYbLmb6S7mW159YFuF_dGN38oYQkxu3eTSVuB
+url = https://www.lazada.vn/products/tham-chui-chanlen-min-tham-lau-chan-chong-tron-truot-hang-cao-cap-mau-moi-40-60cm-i1342643160.html
 
 [megahomevietnam.com]
 match = 20.0%%
