--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-26 12:57:28
+lastsearch = 2024-07-26 13:49:16
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -22,9 +22,9 @@ title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 - Lazada
 url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
 
 [flexhouse.vn]
-match = -9.1%%
-title = Thảm trải sàn chính hãng, giá tốt
-url = https://flexhouse.vn/tham-lot-san
+match = -104.5%%
+title = Thảm tròn trải chân giường trong phòng ngủ phòng khách ...
+url = https://flexhouse.vn/tham-tron-trai-chan-giuong-trong-phong-ngu-phong-khach-tbd6002
 
 [ochino.com]
 match = -45.5%%
