CI images update

--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-26 12:23:07
+lastsearch = 2024-07-26 14:22:03
 
 [www.cms.gov]
 match = 4.5%%
@@ -237,9 +237,9 @@ title = 2013 Council Minutes - City of Iowa City
 url = https://www.iowa-city.org/WebLink/DocView.aspx?id=1350737&dbid=0&repo=CityofIowaCity
 
 [www.cigna.com]
-match = -63.6%%
-title = 2024 Directorio de proveedores y farmacias
-url = https://www.cigna.com/static/www-cigna-com/docs/medicare/plans-services/2024/provider-pharmacy-directory-group-texas-ppo.pdf
+match = -81.8%%
+title = provider-pharmacy-directory-colorado-ppo.pdf
+url = https://www.cigna.com/static/www-cigna-com/docs/medicare/plans-services/2024/provider-pharmacy-directory-colorado-ppo.pdf
 
 [www2.census.gov]
 match = -122.7%%
