--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-07-26 13:18:42
+lastsearch = 2024-07-26 14:22:43
 
 [demxanh.com]
 match = -3.3%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOorMyAXd4IQxDEy1BTVKCuSbzYTpArOtDhuOWfT698DsIdn_OFw7
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOooXDHumuL9Li0prwmNaiCnmw0r1GdRfpHTj76Tqg2-RRWaOr9zZ
 
 [suongtuyet.com]
 match = -13.3%%
@@ -34,7 +34,7 @@ url = https://tiki.vn/blog/chieu-dieu-hoa/
 [demviethome.vn]
 match = 26.7%%
 title = Chiếu điều hòa Latex C16 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/?srsltid=AfmBOoo7U1aHypMlbDCz90Gv840urgTpQgdnDrKwzAEgdjcj2qeLfbLq
 
 [www.dienmayxanh.com]
 match = -36.7%%
