--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-26 13:43:25
+lastsearch = 2024-07-26 14:28:19
 
 [shopee.vn]
 match = 25.0%%
@@ -52,9 +52,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [m.facebook.com]
-match = -175.0%%
-title = Sơ lược về làng nghề dệt chiếu tại Long Định - Cần Đước
-url = https://m.facebook.com/notes/cộng-đồng-long-an/sơ-lược-về-làng-nghề-dệt-chiếu-tại-long-định-cần-đước/402374479949088/
+match = 22.2%%
+title = Chieu Lac
+url = https://m.facebook.com/chieu.lac.73/
 
 [baolongan.vn]
 match = -125.0%%
@@ -255,4 +255,44 @@ url = http://caobangtv.vn/tin-tuc-n75459/huyen-bao-lac-tham-tang-qua-cac-gia-din
 match = -175.0%%
 title = Câu chuyện sợi lác sợi bố - Câu chuyện về Làng chiếu ...
 url = https://www.baodongthap.vn/suy-ngam/cau-chuyen-soi-lac-soi-bo-cau-chuyen-ve-lang-chieu-dinh-yen-116614.aspx
+
+[www.fact-link.com.vn]
+match = -168.8%%
+title = FACT-LINK : : Japan - Vietnam Industrial Directory
+url = https://www.fact-link.com.vn/contact_supplier.php?pid=86
+
+[rentapartment.vn]
+match = -131.2%%
+title = Vietnam Postal Code (Zip code) Update in 2024
+url = https://rentapartment.vn/vietnam-zip-postal-code/
+
+[en.wikipedia.org]
+match = -243.8%%
+title = Viet Cong and People's Army of Vietnam use of terror in the ...
+url = https://en.wikipedia.org/wiki/Viet_Cong_and_People's_Army_of_Vietnam_use_of_terror_in_the_Vietnam_War
+
+[www.tripadvisor.in]
+match = -43.8%%
+title = HCMC shopping - Vietnam Forum
+url = https://www.tripadvisor.in/ShowTopic-g293921-i8432-k1323310-HCMC_shopping-Vietnam.html
+
+[vjol.info.vn]
+match = -43.8%%
+title = Tgp chi Cong nghe Sinh hpc 9(3)
+url = https://vjol.info.vn/index.php/TCSH1/article/download/17035/15203/
+
+[www.lexisnexis.com]
+match = -156.2%%
+title = Records of the Military Assistance Command Vietnam
+url = http://www.lexisnexis.com/documents/academic/upa_cis/3208_recsmacvpt1.pdf
+
+[almosaly.com]
+match = -200.0%%
+title = Waktu Sholat Thi Tran Ngoc Lac Vietnam - Untuk Hari 12 ...
+url = https://almosaly.com/id/mawaquit/day/vietnam/thi-tran-ngoc-lac/137147/2023/09/12
+
+[atpsoftware.vn]
+match = -212.5%%
+title = Danh sách các kho Shopee Express phổ biến nhất tại TP. ...
+url = https://atpsoftware.vn/danh-sach-kho-shopee-express.html
 
