--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-07-26 09:13:15
+lastsearch = 2024-07-26 14:24:50
 
 [chieutrucsaigon.com]
 match = 16.7%%
@@ -14,7 +14,7 @@ url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-da
 [demxanh.com]
 match = -8.3%%
 title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html?srsltid=AfmBOorAEqAPQLroHhvXorlxNpjeRaRlYCPCcQLsNtTGyMy2WMOIc6gs
 
 [chieutrelanlan.com]
 match = -66.7%%
@@ -32,9 +32,9 @@ title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
 url = https://www.facebook.com/chieutregiare/
 
 [shopee.vn]
-match = -37.5%%
-title = (100%% ảnh thật) CHIẾU TRÚC HẠT NÂU, HẠT VÀNG ...
-url = https://shopee.vn/(100-ảnh-thật)-CHIẾU-TRÚC-HẠT-NÂU-HẠT-VÀNG-VIỆT-NAM-NGỌC-LÂM-LOẠI-CAO-CẤP-hàng-dày-mắt-đan-khít--i.11240484.4326979150
+match = 50.0%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [www.yellowpages.vn]
 match = -37.5%%
@@ -59,7 +59,7 @@ url = https://chieutrucxinh.weebly.com/chia-se/previous/2
 [www.lazada.vn]
 match = 20.8%%
 title = [HCM]Chiếu trúc 0,8m x 19m đến 2m
-url = https://www.lazada.vn/products/hcmchieu-truc-08m-x-19m-den-2m-i405120490.html
+url = https://www.lazada.vn/products/hcmchieu-truc-08m-x-19m-den-2m-i405120490.html?srsltid=AfmBOoqhZMzBvbDTbuAMo3etaELTN2cmoQRs7V7VulF68p-lbbD8pT1i
 
 [thptthuthiem.hcm.edu.vn]
 match = -83.3%%
