--- a/images/nem-everon-180x200x9/config.ini
+++ b/images/nem-everon-180x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x9.html
 lastopen = 2024-06-06 17:09:32
 
 [search]
-lastsearch = 2024-07-26 13:49:14
+lastsearch = 2024-07-26 14:23:04
 
 [www.everonvn.vn]
 match = -75.0%%
@@ -110,4 +110,9 @@ url = https://everonhanquoc.vn/everon/12782/dem-bong-ep-everon-9cm
 match = -40.0%%
 title = Switzerland nearly whyne Germany
 url = https://twitter.com/onyeama_joseph/status/1804981125917642919
+
+[nemgiasi.vn]
+match = -50.0%%
+title = NỆM PE HÀN QUỐC CAO CẤP I NEMGIASI.VN
+url = https://nemgiasi.vn/nem-pe-korea-day-9cm
 
