--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-26 11:32:28
+lastsearch = 2024-07-26 14:14:50
 
 [demxanh.com]
 match = -131.6%%
 title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống Demxanh. ...
-url = https://demxanh.com/tam-trang-tri-khach-san.html
+url = https://demxanh.com/tam-trang-tri-khach-san.html?srsltid=AfmBOorkR5o9OQJqL0Lv4wVLGwyKnh-9PMUT-VmTB-EJ6kRPoLy1A9MI
 
 [thegioidemviet.vn]
 match = -73.7%%
