--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-07-26 10:31:13
+lastsearch = 2024-07-26 14:21:23
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -73,8 +73,8 @@ url = https://nemphuoclong.vn/giuong-ngu-boc-da-cao-cap-hien-dai-lb15
 
 [noithatcaco.vn]
 match = -115.0%%
-title = 15+ mẫu giường ngủ cho bé gái 10 tuổi siêu xinh, dễ thương
-url = https://noithatcaco.vn/cam-nang-noi-that/giuong-ngu-cho-be-gai-10-tuoi-744.html
+title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
+url = https://noithatcaco.vn/collections/giuong-ngu
 
 [www.quiphuc.com]
 match = 0.0%%
@@ -82,9 +82,9 @@ title = Giường - Sản phẩm mùa hè
 url = https://www.quiphuc.com/collections/giuong-san-pham-mua-he
 
 [sumika.vn]
-match = -140.0%%
-title = Giường xếp gọn, ghế xếp là hai sản phẩm tiện ích của ...
-url = https://sumika.vn/ghe-xep-giuong-xep-839
+match = -65.0%%
+title = Giường xếp gọn - Thiết bị gia dụng SUMIKA
+url = https://sumika.vn/giuong-xep-gon-846
 
 [noithatanhuy.com.vn]
 match = -20.0%%
@@ -99,7 +99,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-ngu
 [everonvn.com.vn]
 match = -130.0%%
 title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường ...
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOooVB5_ZvvlhteF2YS84kI4ipA5yMzOXaWAi7-1LoRR7Aplu8cvf
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [noithatgiakhanh.net]
 match = -105.0%%
