--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-07-26 12:47:47
+lastsearch = 2024-07-26 15:31:00
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -29,7 +29,7 @@ url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-solid-84/
 [demxanh.com]
 match = 0.0%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 16
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html?srsltid=AfmBOor6VK5UguYb4d_iQ-Wk5nKuqhe8mlhGhPz-rV8TPdUgxEtj6UAj
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html
 
 [thegioinem.com]
 match = 17.9%%
