--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-07-26 09:53:18
+lastsearch = 2024-07-26 15:15:55
 
 [shopee.vn]
 match = 7.4%%
@@ -22,9 +22,9 @@ title = Chăn Lông tuyết KQ 3 Lớp - Chăn 5kg hàng cao cấp chất ...
 url = https://www.lazada.vn/products/chan-long-tuyet-kq-3-lop-chan-5kg-hang-cao-cap-chat-luong-caocuc-ky-am-cho-ngay-ret-dai-han-i2044231389.html
 
 [tiki.vn]
-match = 11.1%%
-title = Chăn nhung tuyết hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn nhung tuyết
+match = -18.5%%
+title = Chăn tuyết nhung 3kg hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn tuyết nhung 3kg
 
 [betuti.vn]
 match = 48.1%%
@@ -58,8 +58,8 @@ url = https://www.youtube.com/watch?v=XHN7YU5NYi4
 
 [lasantevn.com]
 match = -11.1%%
-title = CHĂN LÔNG GẤU TUYẾT BẮC CỰC NÂU(DOUBLE) - Lasante
-url = https://lasantevn.com/chan-long-gau-bac-cuc-nau-2-mat-lasante-phap/
+title = CHĂN LÔNG GẤU TUYẾT BẮC CỰC XÁM (SINGLE) - Lasante
+url = https://lasantevn.com/chan-long-gau-tuyet-bac-cuc-xam-1-mat-lasante-phap/
 
 [www.nguoi-viet.com]
 match = -59.3%%
