--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-26 13:40:36
+lastsearch = 2024-07-26 15:20:43
 
 [tiki.vn]
 match = 16.0%%
@@ -44,7 +44,7 @@ url = https://www.roc-taiwan.org/vnsgn_vi/index.html
 [books.google.com]
 match = -116.0%%
 title = Địa chí Bắc Giang: địa lý và kinh tế - Page 406 - Google Books Result
-url = https://books.google.com/books?id=QIFuAAAAMAAJ&pg=PA406&lpg=PA406&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=7KD_Bd-VtL&sig=ACfU3U3TXCG08rrxBrNb1VSPnVhKtwuxeA&hl=en&sa=X&ved=2ahUKEwjkn9TPjMSHAxXBFlkFHYZxAPIQ6AF6BAgZEAM
+url = https://books.google.com/books?id=QIFuAAAAMAAJ&pg=PA406&lpg=PA406&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=7KD_BeXVuJ&sig=ACfU3U1cHgIgsB1IakKN0QnhP2Wbe3S9Sg&hl=en&sa=X&ved=2ahUKEwiC9q6Ao8SHAxUqM1kFHdx9AeAQ6AF6BAgbEAM
 
 [www.skyscanner.com.vn]
 match = -48.0%%
