--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-07-26 10:34:58
+lastsearch = 2024-07-26 15:16:33
 
 [demxanh.com]
 match = -18.5%%
 title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
-url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html?srsltid=AfmBOopI6S_MeVRx09TkFbg8u7wX449ujT5reVsXhOEac_giYXIPPkLu
+url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
 
 [demre.com.vn]
 match = 66.7%%
@@ -44,7 +44,7 @@ url = https://thegioidemviet.vn/chieu-truc/
 [www.diepxuan.com]
 match = 63.0%%
 title = Điệp Xuân Chiếu trúc Thái đen 160x200
-url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html?srsltid=AfmBOoo62J68yOBYh1DCKRfdz34j8rk_y15s3VTVi_kaIvmSnamsHPXn
+url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 
 [shopee.vn]
 match = -18.5%%
