--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-07-26 14:20:01
+lastsearch = 2024-07-26 15:30:17
 
 [munghoangphat.com]
 match = -24.0%%
@@ -44,7 +44,7 @@ url = https://demvip.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap
 [www.lazada.vn]
 match = -44.0%%
 title = ( BIG SALE ) Màn Chụp Đỉnh Vuông Chân Viền, Mùng ...
-url = https://www.lazada.vn/products/big-sale-man-chup-dinh-vuong-chan-vien-mung-chup-tu-bung-dinh-vuong-chan-vien-hang-cao-cap-bao-hanh-18-thang-i1617727984.html
+url = https://www.lazada.vn/products/big-sale-man-chup-dinh-vuong-chan-vien-mung-chup-tu-bung-dinh-vuong-chan-vien-hang-cao-cap-bao-hanh-18-thang-i1617727984.html?srsltid=AfmBOoplqUMno3_FB_mD80m2hpE5Qwb8xykrTbzStpRthJHH8pio5BKV
 
 [everonvn.com.vn]
 match = 0.0%%
