CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-26 12:50:57
+lastsearch = 2024-07-26 15:42:38
 
 [scholar.google.com]
 match = -43.8%%
@@ -357,9 +357,9 @@ title =
 url = https://mytour.vn/vi/blog/bai-viet/top-8-lang-nghe-det-chieu-truyen-thong-noi-tieng-viet-nam.html
 
 [vietbao.com]
-match = -162.5%%
-title = Nạn Kỳ Thị, Thù Ghét Cộng Đồng LGBTQ+ Gia Tăng ...
-url = https://vietbao.com/a319615/nan-ky-thi-thu-ghet-cong-dong-lgbtq-gia-tang-california-lam-gi-
+match = -137.5%%
+title = Chiếu Khán Eb-5 Có Sẵn Theo Chính Sách Mới Năm 2022
+url = https://vietbao.com/a319621/chieu-khan-eb-5-co-san-theo-chinh-sach-moi-nam-2022
 
 [vnexpress.net]
 match = -18.8%%
