--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-26 13:57:29
+lastsearch = 2024-07-26 15:43:59
 
 [everon.online]
 match = -7.4%%
@@ -14,7 +14,7 @@ url = https://everon.online/products/bo-everon-sr01
 [everonvn.com.vn]
 match = -74.1%%
 title = Bộ Chăn Ga Everon Epm-21071 chất liệu Gỗ Sồi (Modal) mẫu ...
-url = https://everonvn.com.vn/everon/2130/bo-everon-epm-21071?srsltid=AfmBOornatkcNrl2e62cFazrosveqP3cUJbHkpX_NxEOas8RM9P6vDeo
+url = https://everonvn.com.vn/everon/2130/bo-everon-epm-21071
 
 [tongdailyeveron.com.vn]
 match = -5.3%%
@@ -24,17 +24,17 @@ url = https://tongdailyeveron.com.vn/collections/bo-chan-ga-giam-gia
 [demxanh.com]
 match = -7.4%%
 title = Bộ chăn ga gối Everon EPM-21069 | Khuyến mãi
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html?srsltid=AfmBOoqyQfctWuKDIz5c5k-QT88D2Ujtfo66sA4danOcVd9Xww-TBDzA
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
 
 [everonhanquoc.vn]
-match = 22.2%%
-title = Bộ chăn ga gối Everon EPM-21070
-url = http://everonhanquoc.vn/everon/12768/bo-chan-ga-goi-everon-epm-21070
+match = 18.5%%
+title = Bộ chăn ga gối Everon EPC-21053
+url = https://everonhanquoc.vn/everon/12776/bo-chan-ga-goi-everon-epc-21053
 
 [everonhn.com.vn]
-match = -18.5%%
-title = Bộ chăn ga Artemis ASM 20101 - Everon Hà Nội
-url = https://everonhn.com.vn/bo-chan-ga-artemis-asm-20101
+match = 33.3%%
+title = Bộ chăn ga Everon ESB -22020
+url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
 
 [everon.net.vn]
 match = -18.5%%
@@ -43,8 +43,8 @@ url = https://everon.net.vn/everon/2132/bo-everon-epm-21069
 
 [sieuthidemhanquoc.com.vn]
 match = 18.5%%
-title = Bộ chăn ga gối Everon EPM-21068
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21068-1525
+title = Bộ chăn ga gối Everon ESM-21016
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-esm-21016-1518
 
 [shopee.vn]
 match = -44.4%%
