--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-26 13:38:33
+lastsearch = 2024-07-26 15:45:38
 
 [shopee.vn]
 match = -36.8%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -52.6%%
-title = Đi Cấy - Bé Tú Anh | Nhạc Thiếu Nhi [MV]
-url = https://www.youtube.com/watch?v=9Gw_ALBU8jg
+match = -110.5%%
+title = Nhạc thiếu nhi vui nhộn cho bé: Tập thể dục buổi sáng
+url = https://www.youtube.com/watch?v=VcXWebskM88
 
 [dochoihoangthu.com]
 match = -121.1%%
