--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-26 06:32:08
+lastsearch = 2024-07-26 15:38:28
 
 [www.youtube.com]
 match = -72.7%%
@@ -44,7 +44,7 @@ url = https://trithucvn.co/the-gioi/bo-ngoai-giao-my-va-dai-loan-phan-ung-ve-tuy
 [books.google.com]
 match = -96.0%%
 title = Địa chí Tiền Giang - Volume 2 - Page 921 - Google Books Result
-url = https://books.google.com/books?id=eacMAQAAMAAJ&pg=PA921&lpg=PA921&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=jtZLIspENp&sig=ACfU3U29Xwd2N-YRO8LQ9WTY6i6QNTo9Lg&hl=en&sa=X&ved=2ahUKEwiukuqz_8GHAxWYMlkFHbPGCiIQ6AF6BAgVEAM
+url = https://books.google.com/books?id=eacMAQAAMAAJ&pg=PA921&lpg=PA921&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=jtZLIApyHo&sig=ACfU3U0T1Skefu0MpM24YVqUTVfjHotMhQ&hl=en&sa=X&ved=2ahUKEwie_vj7psSHAxVmg4kEHZydCKcQ6AF6BAgYEAM
 
 [www.skyscanner.com.vn]
 match = -60.0%%
@@ -62,9 +62,9 @@ title = 16 người Việt bị bắt tại Đài Loan vì lừa xuyên biên gi
 url = https://vietnamnet.vn/16-nguoi-viet-bi-bat-tai-dai-loan-vi-lua-xuyen-bien-gioi-497646.html
 
 [www.facebook.com]
-match = -52.0%%
-title = VOA Tiếng Việt - Cảnh sát thành phố Đài Trung của ...
-url = https://www.facebook.com/VOATiengViet/posts/cảnh-sát-thành-phố-đài-trung-của-đài-loan-cho-biết-hôm-286-họ-đã-tìm-thấy-16-ngư/882921030539313/
+match = -124.0%%
+title = 20240416 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞 ...
+url = https://www.facebook.com/ptsvietnamesenews/videos/20240416-bản-tin-tiếng-việt-pts-đài-loan-公視越南語新聞/452366227450173/
 
 [baotintuc.vn]
 match = -72.0%%
@@ -309,7 +309,7 @@ url = https://vietcetera.com/vn/cong-thuc-viral-nao-dang-sau-trac-nghiem-tinh-ca
 [www.diepxuan.com]
 match = 28.0%%
 title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html?srsltid=AfmBOoqCob_X5NKJMvuC0mJbTlg1tGfJzhNu7fhMT7damt0n50IEG6KH
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [vanchuyenhangdailoan.com]
 match = 4.0%%
