--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-07-26 10:21:06
+lastsearch = 2024-07-26 15:32:34
 
 [www.everonvn.vn]
 match = -38.7%%
@@ -37,9 +37,9 @@ title = ĐỆM BÔNG ÉP EVERON - Akasi
 url = https://akasi.com.vn/san-pham/dem-bong-ep-everon/
 
 [demxanh.com]
-match = -16.1%%
-title = Đệm Everon chính hãng, đệm bông ép Hàn Quốc giá Sốc
-url = https://demxanh.com/dem-bong-ep-everon.html
+match = -19.4%%
+title = Đệm Foam Everon ExtraFoam chính hãng giá rẻ Hà Nội
+url = https://demxanh.com/dem-foam-everon-extrafoam.html
 
 [everon.online]
 match = 0.0%%
@@ -62,14 +62,14 @@ title = Nệm bông ép gấp 3 Padding Everon
 url = https://khonemtonghop.com/nem-bong-ep-gap-3-padding-everon/
 
 [thegioinem.com]
-match = 0.0%%
-title = Chăn Ga Everon EST24035
-url = https://thegioinem.com/chan-ga-everon-est24035.html
+match = -4.3%%
+title = Chăn ga Everon EPT24084
+url = https://thegioinem.com/chan-ga-everon-ept24084.html
 
 [tongdailyeveron.com.vn]
-match = 0.0%%
-title = ĐỆM NEW EXTRA FOAM
-url = https://tongdailyeveron.com.vn/products/dem-new-extra-foam
+match = -3.2%%
+title = Đệm đa năng EVERON (nệm trải sàn, tấm trải đệm)
+url = https://tongdailyeveron.com.vn/products/dem-da-nang-everon-nem-trai-san-tam-trai-dem
 
 [shopee.vn]
 match = 6.5%%
