--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-26 12:26:06
+lastsearch = 2024-07-26 15:39:54
 
 [www.lazada.vn]
-match = -88.9%%
-title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/nem-sieu-nhe/
+match = -61.1%%
+title = Orangesky Cần Câu Cá Biển Yuantou ...
+url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -11.1%%
-title = NEM Fashion added a new photo.
-url = https://www.facebook.com/photo.php?fbid=749133867249313&id=100064581196454&set=a.651941746968526
+match = -33.3%%
+title = Nem Nướng
+url = https://www.facebook.com/p/Nem-Nướng-100054522756775/
 
 [thegioinem.com]
-match = -105.6%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = -77.8%%
+title = Top 5 nệm mềm, êm bán chạy tại Thế Giới Nệm
+url = https://thegioinem.com/top-5-nem-mem-em-ban-chay-tai-the-gioi-nem.html
 
 [garan.vn]
 match = -166.7%%
