--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-26 13:18:23
+lastsearch = 2024-07-26 15:42:19
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -60.0%%
-title = United States biological weapons program
-url = https://en.wikipedia.org/wiki/United_States_biological_weapons_program
+match = 5.6%%
+title = Vietnamese cuisine
+url = https://en.wikipedia.org/wiki/Vietnamese_cuisine
 
 [www.facebook.com]
 match = -160.0%%
@@ -102,9 +102,9 @@ title =
 url = https://english.moe.go.kr/sub/infoRenewal.do?m=0301&page=0301&s=english
 
 [cryptonews.com]
-match = -135.0%%
-title = Bitcoin Miner TeraWulf Clears Debt, Plans Operational ...
-url = https://cryptonews.com/news/bitcoin-miner-terawulf-clears-debt-plans-operational-upsurge.htm
+match = -110.0%%
+title = Escaped South Korean Criminal Suspect 'Robs OTC ...
+url = https://cryptonews.com/news/escaped-south-korean-criminal-suspect-used-weapon-to-rob-otc-crypto-buyer.htm
 
 [www.google.com]
 match = 0.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -105.0%%
-title = (EDITORIAL from Korea JoongAng Daily on April 6) ...
-url = https://en.yna.co.kr/view/AEN20180406000600320
+match = -160.0%%
+title = (Olympics) Confusion reigns after chaotic finish in short ...
+url = https://en.yna.co.kr/view/AEN20180213013100315
 
 [www.vlr.gg]
 match = 5.6%%
