--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -42,9 +42,9 @@ title = Hoi An Memories Resort & Spa
 url = https://hoianmemoriesresort.com/
 
 [www.tripadvisor.com.vn]
-match = -94.7%%
-title = 10 Khách sạn Sang trọng nhất tại Úc - Tripadvisor
-url = https://www.tripadvisor.com.vn/Hotels-g255055-zff12-Australia-Hotels.html
+match = -73.7%%
+title = 10 Khách sạn tốt nhất tại Úc - Tripadvisor
+url = https://www.tripadvisor.com.vn/Hotels-g255055-Australia-Hotels.html
 
 [3rvietnam.com.vn]
 match = 0.0%%
@@ -257,9 +257,9 @@ title = Search
 url = https://gis.harnett.org/portal/home/search.html?t=content&q=tags:"efektler"
 
 [www.booking.com]
-match = -21.1%%
-title = Các Khách Sạn 4 Sao ở Melbourne
-url = https://www.booking.com/fourstars/city/au/melbourne.vi.html
+match = 5.3%%
+title = Tìm khách sạn ở Canberra
+url = https://www.booking.com/city/au/canberra.vi.html
 
 [spie.org]
 match = -121.1%%
