--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-07-26 13:49:35
+lastsearch = 2024-07-26 15:36:22
 
 [noithathomy.com]
 match = -42.9%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/Tặng-Thảm-Lau-Chân-100-Mẫu-Thảm-2m-x-3m-Thảm-
 [www.lazada.vn]
 match = -42.9%%
 title = Thảm Trải Sàn Nhà 2m X 3m Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/tham-trai-san-nha-2m-x-3m/
+url = https://www.lazada.vn/tag/tham-trai-san-nha-2m-x-3m/?srsltid=AfmBOor9zau_UzHpup5PY0Qe25c33S3Auh7me1gmDR_f3X_AuYuK-js_
 
 [tiki.vn]
 match = -9.5%%
@@ -97,9 +97,9 @@ title = Vườn thực vật Bogor Botanical Garden
 url = http://dulichdisanviet.vn/thong-tin/vuon-thuc-vat-bogor-botanical-garden
 
 [www.facebook.com]
-match = -95.2%%
-title = Thảm Trải Sàn Phòng Khách,Phòng Ngủ, Thảm Trang Trí ...
-url = https://www.facebook.com/story.php/?story_fbid=971384641348596&id=100054312080637
+match = -114.3%%
+title = Thảm lì bali trải sàn phòng khách sang trọng size 1m6-2m3 ...
+url = https://www.facebook.com/ThamTraiSanPhongKhach.ThamTraiSanPhongNgu.BenDep/posts/thảm-lì-bali-trải-sàn-phòng-khách-sang-trọng-size-1m6-2m3-hình-ảnh-và-video-thật/971384641348596/
 
 [www.youtube.com]
 match = -57.1%%
