CI images update

--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-26 12:35:16
+lastsearch = 2024-07-26 16:17:44
 
 [www.tiktok.com]
 match = -35.3%%
@@ -560,4 +560,9 @@ url = https://finance.yahoo.com/news/houston-man-pays-6k-hoa-113600778.html
 match = -194.1%%
 title = Bench warrant issued for arrest of South Carolina man in ...
 url = https://www.greenvilleonline.com/story/news/local/south-carolina/2019/03/14/arrest-warrant-issued-homeowner-simpsonville-south-carolina-hoa-dispute/3138158002/
+
+[www.doi.gov]
+match = 0.0%%
+title = 
+url = https://www.doi.gov/protectnch/about-NCH/partners/fs
 
