--- a/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
+++ b/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-phu-warmdream-freesize-phi-lua.html
 lastopen = 2024-06-10 00:45:38
 
 [search]
-lastsearch = 2024-07-26 12:35:39
+lastsearch = 2024-07-26 16:17:22
 
 [changagoidem.co]
 match = 8.3%%
@@ -17,9 +17,9 @@ title = Bộ Chăn Ga Gối Phi Lụa Dream CiTY Chăn Hè, Chất Liệu ...
 url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Phi-Lụa-Dream-CiTY-Chăn-Hè-Chất-Liệu-Mềm-Mướt-Đơn-Sắc-Set-4-Món-Tiêu-Chuẩn-i.1053999936.24566428759
 
 [hethongnemtot.com]
-match = -60.0%%
-title = Drap Bộ Phi Lụa
-url = https://hethongnemtot.com/drap-bo-phi-lua
+match = -5.3%%
+title = BỘ DRAP MỀN PHI LỤA
+url = https://hethongnemtot.com/bo-drap-men-phi-lua
 
 [www.facebook.com]
 match = 33.3%%
@@ -27,9 +27,9 @@ title = Chăn Ga Gối - Dream House | Van Trai
 url = https://www.facebook.com/changagoidemdreamhouse/
 
 [sieuthimuare.com]
-match = 0.0%%
-title = Bộ Chăn Ga Gối Phi Lụa 5 Món Chần Bông Thêu Sang ...
-url = https://sieuthimuare.com/chan-ga-goi-phi-lua-chan-bong/
+match = 8.3%%
+title = Bộ Chăn Ga Gối Phi Lụa Chăn Chần Bông Thêu ...
+url = https://sieuthimuare.com/bo-chan-ga-goi-phi-lua-chan-chan/
 
 [vuanem.com]
 match = -2.8%%
@@ -42,9 +42,9 @@ title = Điệp Xuân Chăn ga gối đệm Điệp Xuân
 url = https://diepxuan.com/
 
 [muathongminh.vn]
-match = -16.7%%
-title = Lịch sử giá Bộ chăn ga gối phi lụa Dream city chất liệu ...
-url = https://muathongminh.vn/bo-chan-ga-goi-phi-lua-theu-chu-h-luxury-life-mem-min-sang-trong-set-lua-4-mon-chan-tran-he-mat-lanh-p.1__16513396310__230538458
+match = -5.6%%
+title = Bộ ga giường Lụa Dream City cao cấp cho căn hộ đầy đủ ...
+url = https://muathongminh.vn/bo-ga-giuong-lua-dream-city-cao-cap-cho-can-ho-day-du-size-drap-phu-hoac-bo-chun-p.1__4682008640__50670826
 
 [simplici7y.com]
 match = 0.0%%
