--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-26 12:31:21
+lastsearch = 2024-07-26 16:24:34
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg
 [www.lazada.vn]
 match = 3.7%%
 title = Chăn Tuyết Nhung 5kg Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/
+url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/?srsltid=AfmBOooX6Q-hVoxW_rD-yKVJ8Vxufx9h8k3DrhP4CN8FJixZroPQkAvj
 
 [tiki.vn]
 match = -3.7%%
@@ -29,7 +29,7 @@ url = https://tiki.vn/search?q=chăn tuyết nhung
 [demxanh.com]
 match = -18.5%%
 title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html?srsltid=AfmBOoq2uJoz5kBgGPnsFZWMY3lfmoj_iolA3C0HRrgJBfO5Z4L-BiNj
 
 [ninhouse.vn]
 match = 32.0%%
@@ -164,7 +164,7 @@ url = https://stockbiz.vn/tin-tuc/ha-noi-huong-toi-xuat-khau-thuy-san/26441575
 [metric.vn]
 match = -48.1%%
 title = Báo cáo thị trường Chăn lông tuyết 5kg dành cho doanh ...
-url = https://metric.vn/chan-long-tuyet-5kg
+url = https://metric.vn/chan-long-tuyet-5kg?srsltid=AfmBOoqJdIyDuLAGaKuBPO7ZgSgEHMBSU__bXyEzx66Ej6F-AWCc1NU6
 
 [ts.udn.vn]
 match = -10.0%%
