--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-26 14:39:57
+lastsearch = 2024-07-26 16:17:01
 
 [vinatools.com]
 match = -140.0%%
@@ -12,8 +12,8 @@ title = Kéo cắt tôn dày 1.0mm kiểu dáng cổ điển Bessey
 url = https://vinatools.com/keo-cat-ton-d-216-116/
 
 [www.vietnamairport.vn]
-match = -240.0%%
-title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt Nam ...
+match = -213.3%%
+title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt ...
 url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/so-do-nha-ga-2
 
 [noibaiairport.vn]
