--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-26 14:00:36
+lastsearch = 2024-07-26 16:23:31
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -243.8%%
-title = Thị trường cà phê trong nước và thế giới biến động trái chiều ...
-url = https://www.youtube.com/watch?v=0vPz1cnaTNM
+match = -231.2%%
+title = Hướng Dẫn Cài Đặt Và Chơi Bi-A Online (ShooterPool Online ...
+url = https://www.youtube.com/watch?v=cwmnCALFZfM
 
 [tuyensinh247.com]
 match = -225.0%%
