--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-07-26 15:30:17
+lastsearch = 2024-07-26 16:16:19
 
 [munghoangphat.com]
 match = -24.0%%
@@ -22,9 +22,9 @@ title = Mùng chụp tự bung đỉnh vuông cao cấp khóa to mắt dày ...
 url = https://shopee.vn/Mùng-chụp-tự-bung-đỉnh-vuông-cao-cấp-khóa-to-mắt-dày-dặn-màn-chụp-xếp-gọn-nhiều-size-i.116277580.6522803157
 
 [www.mungbaobao.com]
-match = 48.0%%
-title = Mùng Chụp Tự Bung Đỉnh Vuông 1m6 x 2m
-url = https://www.mungbaobao.com/mung-chup-tu-bung-dinh-vuong-1m6-x-2m.html
+match = 24.0%%
+title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
+url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -42,9 +42,9 @@ title = Màn chụp tự bung đỉnh vuông cao cấp
 url = https://demvip.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap
 
 [www.lazada.vn]
-match = -44.0%%
-title = ( BIG SALE ) Màn Chụp Đỉnh Vuông Chân Viền, Mùng ...
-url = https://www.lazada.vn/products/big-sale-man-chup-dinh-vuong-chan-vien-mung-chup-tu-bung-dinh-vuong-chan-vien-hang-cao-cap-bao-hanh-18-thang-i1617727984.html?srsltid=AfmBOoplqUMno3_FB_mD80m2hpE5Qwb8xykrTbzStpRthJHH8pio5BKV
+match = 4.0%%
+title = MÙNG CHỤP TỰ BUNG ĐỈNH VUÔNG MÀN CHỤP KIỂU ...
+url = https://www.lazada.vn/products/mung-chup-tu-bung-dinh-vuong-man-chup-kieu-dang-tien-loi-cho-cac-phong-ngu-i1921294227.html
 
 [everonvn.com.vn]
 match = 0.0%%
