--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-26 15:24:17
+lastsearch = 2024-07-26 16:22:30
 
 [www.linkedin.com]
 match = -145.5%%
@@ -27,8 +27,8 @@ title = Tam Thi Tran Obituary - Wichita, KS
 url = https://www.dignitymemorial.com/obituaries/wichita-ks/tam-tran-9902717
 
 [www.facebook.com]
-match = -227.3%%
-title = Eat Healthier and more Economically - Salina
+match = -354.5%%
+title = Eat Healthier and more Economically | Kansas | March is ...
 url = https://www.facebook.com/SalinaRegionalHealthCenter/videos/eat-healthier-and-more-economically/859948698432933/
 
 [www.hoteljob.vn]
@@ -109,7 +109,7 @@ url = https://www.sesostrisshrine.org/pages/uploaded_files/15_JF.pdf
 [kstoolsvietnam.vn]
 match = -327.3%%
 title = Kéo cắt thép tấm KS Tools 118.0148 cắt thuận tay trái.
-url = https://kstoolsvietnam.vn/keo-cat-ton-tam/keo-cat-thep-tam-ks-tools-1180148-cat-thuan-tay-trai.html
+url = https://kstoolsvietnam.vn/keo-cat-ton-tam/keo-cat-thep-tam-ks-tools-1180148-cat-thuan-tay-trai.html?srsltid=AfmBOoq07mdeIA48op0UKSLJdDZkq4kzzjuOYbBDZZ1t-fCkWds7DuKU
 
 [sagatexvietnam.com.vn]
 match = -345.5%%
