CI images update

--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-26 15:28:49
+lastsearch = 2024-07-26 16:41:41
 
 [tiki.vn]
 match = -47.6%%
@@ -12,9 +12,9 @@ title = Chiếu trúc đài loan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu trúc đài loan
 
 [www.facebook.com]
-match = -90.5%%
-title = Sau 4 ngày công chiếu tại Đài Loan, Thanh Xuân 18x2: Lữ ...
-url = https://www.facebook.com/photo.php?fbid=844924327674339&id=100064703379579&set=a.669666201866820
+match = -85.7%%
+title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
+url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
 
 [www.roc-taiwan.org]
 match = -42.9%%
@@ -22,9 +22,9 @@ title = Thủ tục cấp đổi hộ chiếu cho người Đài Loan
 url = https://www.roc-taiwan.org/vn_vi/post/62.html
 
 [www.tiktok.com]
-match = -19.0%%
-title = Cách Xem Lịch Chiếu Film Tại Taiwan
-url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
+match = -66.7%%
+title = 18x2 Beyond Youthful Days Có Chiếu Tại Đìa Loan Ko
+url = https://www.tiktok.com/discover/18x2-beyond-youthful-days-có-chiếu-tại-đìa-loan-ko
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
@@ -57,9 +57,9 @@ title = Phim thanh xuân dựa trên câu chuyện có thật của Hứa ...
 url = https://baophapluat.vn/phim-thanh-xuan-dua-tren-cau-chuyen-co-that-cua-hua-quang-han-chot-ngay-ra-rap-post507664.html
 
 [hoahoctro.tienphong.vn]
-match = -128.6%%
-title = Động đất ở phía Đông Đài Loan (Trung Quốc) khi bão Gaemi ...
-url = https://hoahoctro.tienphong.vn/dong-dat-o-phia-dong-dai-loan-trung-quoc-khi-bao-gaemi-vua-di-qua-post1658230.tpo
+match = -119.0%%
+title = Hứa Quang Hán tiếp tục làm “nam thần thanh xuân”, sang ...
+url = https://hoahoctro.tienphong.vn/hua-quang-han-tiep-tuc-lam-nam-than-thanh-xuan-sang-nhat-tim-lai-moi-tinh-dau-post1576959.tpo
 
 [thanhnien.vn]
 match = -95.2%%
@@ -67,9 +67,9 @@ title = Hứa Quang Hán 'ghi điểm' trong phim Đài Loan có doanh ...
 url = https://thanhnien.vn/hua-quang-han-ghi-diem-trong-phim-dai-loan-co-doanh-thu-chieu-som-cao-nhat-1852404081738149.htm
 
 [www.youtube.com]
-match = -104.8%%
-title = VỪA GẶP ĐÃ YÊU TẬP 18 | Phim Bộ Tình Cảm Trung Quốc ...
-url = https://www.youtube.com/watch?v=phzQ4MxJ1LQ
+match = -128.6%%
+title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 18 | Trọn Bộ Phim ...
+url = https://www.youtube.com/watch?v=-5kfc6oUOmU
 
 [zh.wikipedia.org]
 match = -9.5%%
@@ -87,9 +87,9 @@ title = Đài Loan (Trung Quốc) tiếp tục tìm kiếm 18 người mất tí
 url = https://nhandan.vn/dai-loan-trung-quoc-tiep-tuc-tim-kiem-18-nguoi-mat-tich-sau-dong-dat-post803249.html
 
 [www.diepxuan.com]
-match = 14.3%%
-title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
+match = 19.0%%
+title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 
 [znews.vn]
 match = -104.8%%
