--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-26 15:38:51
+lastsearch = 2024-07-26 16:35:21
 
 [www.instagram.com]
 match = -23.1%%
@@ -12,9 +12,9 @@ title = Yuki Chan (@meow_kikiki)
 url = https://www.instagram.com/meow_kikiki/
 
 [www.linkedin.com]
-match = -192.3%%
-title = Hoi Ki Chan - 2D Game Artist - Omoté Singapore
-url = https://www.linkedin.com/in/hoi-ki-chan-519219147
+match = 23.1%%
+title = Hoi Chan Studio
+url = https://www.linkedin.com/in/yiu-hoi-chan
 
 [www.creativeboom.com]
 match = -307.7%%
