--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-07-26 15:59:14
+lastsearch = 2024-07-26 16:42:26
 
 [demxanh.com]
-match = 14.8%%
-title = Sử dụng chiếu điều hòa có tốt hay không?
-url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
+match = -14.8%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [shopee.vn]
 match = 18.5%%
@@ -52,9 +52,9 @@ title = Chiếu Điều Hòa Sợi Mây Tổng Hợp Cao Cấp ... - Babies.vn
 url = https://babies.vn/chieu-dieu-hoa-soi-may-tong-hop-cao-cap-chieu-dieu-hoa-thong-minh-thoang-khi-mat-ruoi-cho-mua-he
 
 [betiti.com]
-match = -29.6%%
-title = Chiếu Điều Hòa - Betiti - Chuyên Đồ Sơ Sinh, Trọn Bộ ...
-url = https://betiti.com/san-pham/chieu-dieu-hoa/
+match = 68.2%%
+title = Chiếu điều hòa kèm gối
+url = https://betiti.com/san-pham/chieu-dieu-hoa-kem-goi/
 
 [nemsaithanh.com]
 match = 46.2%%
