--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-26 15:20:22
+lastsearch = 2024-07-26 16:28:42
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -37,9 +37,9 @@ title = [New] Bảng Giá nệm cao su Kim Cương - Sale Tháng 3, 4 ...
 url = https://thegioidemviet.vn/dem-cao-su-kim-cuong/
 
 [www.diepxuan.com]
-match = -61.9%%
-title = Điệp Xuân Nệm Everhome - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome.html?srsltid=AfmBOooE3m1o56fQfvU2EMC42TG4ShNWzwQqH8A0STUVbCgK_v6DMuc2
+match = 23.8%%
+title = Nệm everhome TC 15F 16 20 - Điệp Xuân
+url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html
 
 [bachhoadem.vn]
 match = 28.6%%
@@ -52,9 +52,9 @@ title = Đệm Bông ép Everhome Vỏ TC
 url = https://demsingapore.com/dem-bong-ep-everhome-vo-tc.html
 
 [demviethome.vn]
-match = -52.4%%
-title = Tổng kho đệm bông ép chính hãng tại Hà Nội
-url = https://demviethome.vn/dem-bong-ep/?srsltid=AfmBOoqzqKyazoRS8EQw96V0wneKytm2x6MemnWYh0nmA_5C4pVjLf3z
+match = -57.1%%
+title = Đệm bông ép Everhome gấm xốp giá rẻ hà nội. ...
+url = https://demviethome.vn/dem-bong-ep-everhome-gam-xop/
 
 [www.tiktok.com]
 match = -95.2%%
