--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-26 15:42:19
+lastsearch = 2024-07-26 16:36:05
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = 5.6%%
-title = Vietnamese cuisine
-url = https://en.wikipedia.org/wiki/Vietnamese_cuisine
+match = -33.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
 match = -160.0%%
@@ -192,9 +192,9 @@ title = 12 Days in Seoul - by LA Seoulite - Everything about Korea
 url = https://laseoulite.substack.com/p/12-days-in-seoul
 
 [www.tiktok.com]
-match = -145.0%%
-title = Authentic Korean Street Food in Parramatta | Tteobokki & ...
-url = https://www.tiktok.com/@jensfoodfeed/video/7326417846177697025
+match = -5.0%%
+title = Korean Afreecatv Wngml774
+url = https://www.tiktok.com/discover/korean-afreecatv-wngml774
 
 [www.imdb.com]
 match = 0.0%%
