CI images update

--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-26 14:11:43
+lastsearch = 2024-07-26 16:57:15
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/hoangtuetam
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiUZMsLXB&sig=ACfU3U31jbCsAv7JCf-NRo43wTGZg1FgrA&hl=en&sa=X&ved=2ahUKEwj3ifPJk8SHAxWJFlkFHXtJD-4Q6AF6BAgVEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiUZNsK_E&sig=ACfU3U2_xBKRMXF_FBy49rRh9eSiDldOZg&hl=en&sa=X&ved=2ahUKEwiW05nKuMSHAxUzrYkEHeBCB1sQ6AF6BAgXEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -72,9 +72,9 @@ title = Fuji Master
 url = https://fujimaster.com.vn/
 
 [store.steampowered.com]
-match = -76.9%%
-title = Tiết kiệm đến 75%% khi mua Marvel's Midnight Suns trên ...
-url = https://store.steampowered.com/app/368260/_/?l=vietnamese&utm_source=keylol&curator_clanid=9730205
+match = 7.7%%
+title = Anno 1800 - Steampunk Pack
+url = https://store.steampowered.com/app/2830580/Anno_1800__Steampunk_Pack/?l=vietnamese&snr=1_wishlist_4__wishlist-capsule
 
 [vi.wikipedia.org]
 match = -23.1%%
