--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-26 16:18:45
+lastsearch = 2024-07-26 16:45:49
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -187,9 +187,9 @@ title = 974 người theo dõi trên Pinterest - Petal Designs
 url = https://petaldesigns.co.za/ảnh-cặc-to-anime.html
 
 [m.facebook.com]
-match = -187.5%%
-title = Zenless Zone Zero Việt Nam | Từ lúc chơi game đến bây ...
-url = https://m.facebook.com/groups/zzzvn/posts/852971510065216/
+match = -112.5%%
+title = HR - TUYỂN DỤNG | [𝐇𝐂𝐌] DÌ MAI LANDMARK 81
+url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8360577797299527/
 
 [baomoi.com]
 match = -193.8%%
@@ -610,4 +610,14 @@ url = https://www.baohoabinh.com.vn/
 match = -168.8%%
 title = Tôi Từ Một Chú Gấu Túi Xuyên Thành Diễn Viên Tuyến 18
 url = https://metruyen.me/truyen/toi-tu-mot-chu-gau-tui-xuyen-thanh-dien-vien-tuyen-18/chuong-4
+
+[www.viaep.org.vn]
+match = -150.0%%
+title = Viện Cơ điện nông nghiệp và Công nghệ sau thu hoạch
+url = http://www.viaep.org.vn/
+
+[baochinhphu.vn]
+match = -112.5%%
+title = Cung thủ Lê Quốc Phong xếp hạng 47 vòng ...
+url = https://baochinhphu.vn/cung-thu-le-quoc-phong-xep-hang-47-vong-xep-hang-mon-ban-cung-tai-olympic-102240725235458908.htm
 
