--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-26 16:17:44
+lastsearch = 2024-07-26 16:44:44
 
 [www.tiktok.com]
 match = -35.3%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -158.8%%
-title = Biographic Register - Page 400 - Google Books Result
-url = https://books.google.com/books?id=jy8oAQAAMAAJ&pg=RA5-PA400&lpg=RA5-PA400&dq=man+in+hoa+dep+16&source=bl&ots=2oz2K47O5R&sig=ACfU3U1sanaTmAmAN_C_Bx65Y-Y0D2zWrw&hl=en&sa=X&ved=2ahUKEwiQlM6C_sOHAxUCJEQIHaijKZ0Q6AF6BAgbEAM
+match = -123.5%%
+title = The army list - Page 463 - Google Books Result
+url = https://books.google.com/books?id=YvANAAAAQAAJ&pg=RA1-PA463&lpg=RA1-PA463&dq=man+in+hoa+dep+16&source=bl&ots=KC68stONSH&sig=ACfU3U03Wp-8QS5ObQxMuFdDV9x3dDC4Mg&hl=en&sa=X&ved=2ahUKEwjD4PzjtcSHAxU1k4kEHfowANQQ6AF6BAgZEAM
 
 [tax.vermont.gov]
 match = -29.4%%
