--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-26 14:41:18
+lastsearch = 2024-07-26 16:54:54
 
 [www.diepxuan.com]
 match = -6.7%%
 title = Điệp Xuân Chiếu cây HT 160x200
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOooQ6htUfqjBMai6V6FALQfYFzvCGE7KeiFWp9uwmWj6BiZsKE66
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [shopee.vn]
-match = -40.0%%
-title = chiếu trúc tăm HT cao cấp 2mx2.2m
-url = https://shopee.vn/chiếu-trúc-tăm-HT-cao-cấp-2mx2.2m-i.68883759.22469028239
+match = -6.7%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [www.htv.com.vn]
 match = -106.7%%
@@ -32,9 +32,9 @@ title = Cộng đồng cư dân Bát Tràng | Chiếu tăm cây H&T khẳng ...
 url = https://www.facebook.com/groups/664918127312487/posts/chiếu-tăm-cây-ht-khẳng-định-thương-hiệu-trên-thị-trường-freeshiplh-0963-658-905-/1872701319867489/
 
 [hatari.com.vn]
-match = -13.3%%
-title = Quạt lửng Hatari HT-S14M3
-url = https://hatari.com.vn/san-pham/quat-lung-hatari-ht-s14m3
+match = -126.7%%
+title = Quạt lửng Hatari HT- S16M7 - hatari.com.vn
+url = https://hatari.com.vn/san-pham/quat-lung-hatari-ht-s16m7
 
 [www.htlightlevel.vn]
 match = -153.3%%
