--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-07-26 15:36:22
+lastsearch = 2024-07-26 17:22:17
 
 [noithathomy.com]
 match = -42.9%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/Tặng-Thảm-Lau-Chân-100-Mẫu-Thảm-2m-x-3m-Thảm-
 [www.lazada.vn]
 match = -42.9%%
 title = Thảm Trải Sàn Nhà 2m X 3m Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/tham-trai-san-nha-2m-x-3m/?srsltid=AfmBOor9zau_UzHpup5PY0Qe25c33S3Auh7me1gmDR_f3X_AuYuK-js_
+url = https://www.lazada.vn/tag/tham-trai-san-nha-2m-x-3m/
 
 [tiki.vn]
 match = -9.5%%
