--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-07-26 15:21:51
+lastsearch = 2024-07-26 17:16:24
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -28,8 +28,8 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
 match = -87.5%%
-title = Everon EST-22034 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-est22034.html
+title = Everon EPC-22046 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epc22046.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
@@ -39,7 +39,7 @@ url = https://songhongchinhhang.vn/URBAN-COLLECTION/bo-urban-coleection-2022-202
 [everon.com.vn]
 match = -66.7%%
 title = Bộ Chăn Ga Everon EPM 22060 | Mới Nhất Năm 2022. Hotline
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/?srsltid=AfmBOorLmJ9HZbv5ev_dn6qqogRZe40OxqhPbLKDgY95PzGn0BxnIrBw
 
 [dailyeveron.vn]
 match = -66.7%%
@@ -79,7 +79,7 @@ url = https://everonletrongtan.com/bo-suu-tap-everon-2022
 [jysk.vn]
 match = 0.0%%
 title = Phụ kiện chăn ga gối - JYSK.vn
-url = https://jysk.vn/phu-kien-chan-ga-goi
+url = https://jysk.vn/phu-kien-chan-ga-goi?srsltid=AfmBOoohkcVWZot8STXLntVeeDRwhAP2oXx--k-v-x2kn97kgKF_SVeK
 
 [www.facebook.com]
 match = 15.8%%
