--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-26 14:14:29
+lastsearch = 2024-07-26 17:14:17
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -67,9 +67,9 @@ title = Giữ nghề dệt chiếu Long Cang
 url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
-match = -162.5%%
-title = TIN CHIỀU 25/7: HUYỀN THOẠI M.U MUỐN GIỮ RASHFORD ...
-url = https://www.youtube.com/watch?v=LXqHpPenE6A
+match = -200.0%%
+title = Tin Bóng Đá 26/7: MU CHIÊU MỘ MARTIN ZUBIMENDI, 5 TÀI ...
+url = https://www.youtube.com/watch?v=E0zppQi5xQ8
 
 [books.google.com]
 match = -218.8%%
@@ -587,9 +587,9 @@ title = 6 địa điểm tiêm HPV ở Đà Nẵng uy tín: Giá tiền và các
 url = https://vnvc.vn/dia-diem-tiem-hpv-o-da-nang/
 
 [media.chinhphu.vn]
-match = -225.0%%
-title = Chủ tịch Quốc hội Trần Thanh Mẫn tiếp Chủ tịch Thượng viện ...
-url = https://media.chinhphu.vn/chu-tich-quoc-hoi-tran-thanh-man-tiep-chu-tich-thuong-vien-campuchia-hun-sen-102240726114213633.htm
+match = -106.2%%
+title = Cảnh báo giả mạo website của Tổng cục Thuế
+url = https://media.chinhphu.vn/canh-bao-gia-mao-website-cua-tong-cuc-thue-102240726150622866.htm
 
 [www.quangninh.gov.vn]
 match = -193.8%%
