CI images update

--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-07-26 16:34:40
+lastsearch = 2024-07-26 17:43:58
 
 [chieutrucsaigon.com]
-match = 16.7%%
-title = CHIẾU TRÚC SẢN PHẨM ĐỘC ĐÁO ĐA DẠNG
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-dao-da-dang-40.html
+match = 33.3%%
+title = BÁN CHIẾU TRÚC VIỆT NAM QUẬN 12
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-viet-nam-quan-12-104.html
 
 [demxanh.com]
-match = -8.3%%
-title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
+match = 25.0%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [chieutrelanlan.com]
 match = -66.7%%
@@ -27,9 +27,9 @@ title = Chiếu Nằm (Chiếu Tre, Chiếu Trúc, Chiếu Cói,..)
 url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-truc-chieu-coi,..).html
 
 [www.facebook.com]
-match = 4.2%%
-title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
-url = https://www.facebook.com/chieutregiare/
+match = 8.3%%
+title = CHIẾU TRE TRÚC HCM | Ho Chi Minh City
+url = https://www.facebook.com/chieutructot/?locale=vi_VN
 
 [shopee.vn]
 match = -37.5%%
@@ -127,7 +127,17 @@ title = Hướng dẫn quần chúng nhân dân và các đoàn đến viếng .
 url = https://xaydungchinhsach.chinhphu.vn/tphcm-huong-dan-quan-chung-nhan-dan-va-cac-doan-den-vieng-tong-bi-thu-nguyen-phu-trong-119240724110435557.htm
 
 [thuvienphapluat.vn]
-match = -100.0%%
-title = Người lao động đại diện 1 nhóm người giao kết hợp đồng ...
-url = https://thuvienphapluat.vn/lao-dong-tien-luong/nguoi-lao-dong-dai-dien-1-nhom-nguoi-giao-ket-hop-dong-lao-dong-trong-truong-hop-nao-27204.html
+match = -79.2%%
+title = Tỷ lệ đóng BHXH từ 1/7/2025? Mức đóng BHXH bắt buộc ...
+url = https://thuvienphapluat.vn/phap-luat/ty-le-dong-bhxh-tu-172025-muc-dong-bhxh-bat-buoc-cua-nguoi-lao-dong-va-doanh-nghiep-nhu-the-nao-168864.html
+
+[tamanhhospital.vn]
+match = -91.7%%
+title = 7 vật liệu trám răng: Ưu nhược điểm, nên chọn chất liệu nào?
+url = https://tamanhhospital.vn/vat-lieu-tram-rang/
+
+[www.tayninh.gov.vn]
+match = -12.5%%
+title = Ban Chỉ đạo thu Ngân sách tỉnh Tây Ninh
+url = https://www.tayninh.gov.vn/vi/news/dua-nghi/ban-chi-dao-thu-ngan-sach-tinh-tay-ninh-dam-bao-thu-ngan-sach-dung-du-va-kip-thoi-47776.html
 
