--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-07-26 16:29:25
+lastsearch = 2024-07-26 17:51:13
 
 [shopee.vn]
 match = 0.0%%
@@ -17,14 +17,14 @@ title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
 url = https://www.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690.html?srsltid=AfmBOoqzoZfLxNNYtOQuAuN7SC309SNlHMi0WjTjhJ2C2hykOw4ryMas
 
 [tiki.vn]
-match = 7.4%%
-title = Chăn lông 4 kg hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn lông 4 kg
+match = 11.1%%
+title = Chăn nhung tuyết hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn nhung tuyết
 
 [h5.lazada.vn]
 match = -11.1%%
-title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
-url = https://h5.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690-s12540487699.html
+title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
+url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [tienphong.vn]
 match = 3.7%%
@@ -48,8 +48,8 @@ url = https://thitruongsi.com/chan-long-cuu-tuyet-yuki-sieu-am-nang-4kg-chinh-ha
 
 [www.youtube.com]
 match = -48.1%%
-title = [ENG SUB] Bí Quyết ướp Sườn Nướng Cơm Tấm mềm thơm ...
-url = https://www.youtube.com/watch?v=cJu6tFJe_Gc
+title = TÌNH NGƯỜI DUYÊN MA - Tập 9 | Phim Thái Lan Lồng Tiếng ...
+url = https://www.youtube.com/watch?v=4XWKziKBppI
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -147,9 +147,9 @@ title = CHĂN LÔNG GẤU TUYẾT BẮC CỰC XÁM (SINGLE) - Lasante
 url = https://lasantevn.com/chan-long-gau-tuyet-bac-cuc-xam-1-mat-lasante-phap/
 
 [demxanh.com]
-match = -18.5%%
-title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
+match = 11.1%%
+title = Chăn tuyết Hàn Quốc Soft 2kg kẻ hồng
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-ke-hong.html
 
 [vnvc.vn]
 match = -59.3%%
@@ -270,4 +270,9 @@ url = https://ideas.repec.org/e/c/ppe42.html
 match = -83.3%%
 title = ASIC Gazette
 url = https://download.asic.gov.au/media/3549401/um1_16.pdf
+
+[dienmaycholon.com]
+match = -29.6%%
+title = Android Tivi QLED 4K Casper 55 Inch 55QG8000
+url = https://dienmaycholon.com/tivi/android-tivi-qled-4k-casper-55-inch-55qg8000
 
