--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-26 16:27:59
+lastsearch = 2024-07-26 17:47:29
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = 50 Bài Dân Ca Miền Tây Nam Bộ Hay Nhất ✔ Liên Khúc Mấy ..
 url = https://www.youtube.com/watch?v=LJYP9DXqsxE
 
 [books.google.com]
-match = -218.8%%
-title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+18&source=bl&ots=aHabHU8fzg&sig=ACfU3U2p7ltlIpj0FUOp7Y83crPD3ZT41g&hl=en&sa=X&ved=2ahUKEwiGhsGEssSHAxUxMVkFHWUQBXQQ6AF6BAggEAM
+match = -87.5%%
+title = NCĐT số 774: Lạc Lối Trong Mạng Xã Hội
+url = https://books.google.com/books?id=TQpuEAAAQBAJ&pg=PA6&lpg=PA6&dq=chieu+lac+soc+18&source=bl&ots=HENP0_Z7VE&sig=ACfU3U2d0edGvRrJ1URv5AuUUxX7qIcjmg&hl=en&sa=X&ved=2ahUKEwi13v7mw8SHAxW-D1kFHbWyAXIQ6AF6BAggEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
