--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-07-26 12:47:28
+lastsearch = 2024-07-26 17:53:55
 
 [www.lazada.vn]
 match = -17.4%%
@@ -37,9 +37,9 @@ title = sản xuất chiếu nhựa
 url = https://www.yellowpages.vn/tgcls/40490435/sản-xuất-chiếu-nhựa.html?j=3
 
 [m.facebook.com]
-match = 4.3%%
-title = Xưởng chiếu nhựa Thái bình 2023 | Thai Binh
-url = https://m.facebook.com/CHIEUNHUAHATRANG/
+match = -13.0%%
+title = Xưởng sản xuất chiếu nhựa Thái Bình | Thai Binh
+url = https://m.facebook.com/61553157173242/
 
 [sangothaibinh.com]
 match = 47.8%%
@@ -59,7 +59,7 @@ url = https://tiki.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-p160055664.html
 [www.lamchame.com]
 match = -69.6%%
 title = Chiếu Cói Gốcthái Bình,chiếu Nhựa-trúc-mây-điều Hòa ...
-url = https://www.lamchame.com/forum/threads/chieu-coi-gocthai-binh-chieu-nhua-truc-may-dieu-hoa-lam-chieu-coi-theo-k-thuoc-ycau-0912-794-282.2041482/
+url = https://www.lamchame.com/forum/threads/chieu-coi-thai-binh-chinh-goc-chieu-nhua-truc-nhan-dat-theo-k-thuoc-yeu-cau-0912-794-282.2041482/page-5
 
 [thaibinhtv.vn]
 match = -47.8%%
@@ -72,9 +72,9 @@ title = Ngói Nhựa Thái Bình Giá Bán Lẻ Ngói Nhựa ASA/PVC 04 Lớp
 url = https://www.tonpvc.com/thai-binh-gia-ban-le-ngoi-nhua-asa-pvc-04-lop/
 
 [www.diepxuan.com]
-match = 13.0%%
-title = Chiếu nhựa Thái Bình GT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-160x200.html
+match = 26.1%%
+title = Chiếu nhựa Thái Bình 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-160x200.html
 
 [h5.lazada.vn]
 match = -17.4%%
