--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-07-26 16:47:13
+lastsearch = 2024-07-26 17:55:17
 
 [munghoangphat.com]
 match = -24.0%%
@@ -22,9 +22,9 @@ title = Mùng chụp tự bung đỉnh vuông cao cấp khóa to mắt dày ...
 url = https://shopee.vn/Mùng-chụp-tự-bung-đỉnh-vuông-cao-cấp-khóa-to-mắt-dày-dặn-màn-chụp-xếp-gọn-nhiều-size-i.116277580.6522803157
 
 [www.mungbaobao.com]
-match = 48.0%%
-title = Mùng Chụp Tự Bung Đỉnh Vuông 1m6 x 2m
-url = https://www.mungbaobao.com/mung-chup-tu-bung-dinh-vuong-1m6-x-2m.html
+match = 24.0%%
+title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
+url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
 
 [www.diepxuan.com]
 match = 100.0%%
