--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-07-26 16:42:04
+lastsearch = 2024-07-26 17:48:29
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/list/giường xếp
 [sofatoanquoc.com]
 match = 30.0%%
 title = Giường ngủ bọc da mã 15
-url = https://sofatoanquoc.com/giuong-ngu-boc-da-ma-15.html?srsltid=AfmBOoo6X49TgNhLfj4Ij7esY_NGfcUu-G6SFyrY2WZyIKM8b5D3hxaM
+url = https://sofatoanquoc.com/giuong-ngu-boc-da-ma-15.html
 
 [noithathoaphat360.com]
 match = -55.0%%
@@ -87,9 +87,9 @@ title = Giường xếp gọn - Thiết bị gia dụng SUMIKA
 url = https://sumika.vn/giuong-xep-gon-846
 
 [noithatanhuy.com.vn]
-match = -20.0%%
-title = Bộ giường tủ giá rẻ mẫu 15 - Vân gỗ
-url = https://noithatanhuy.com.vn/bo-giuong-tu-gia-re-mau-15-van-go
+match = -5.0%%
+title = Bộ giường tủ giá rẻ mẫu 15 - Nâu
+url = https://noithatanhuy.com.vn/bo-giuong-tu-gia-re-mau-15-nau
 
 [flexhouse.vn]
 match = -55.0%%
@@ -99,7 +99,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-ngu
 [everonvn.com.vn]
 match = -130.0%%
 title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường ...
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOoqOqzPwcbIzBah7TA8QUSzO7L8DAk6Up-gSGwpsMxTg-MYqxDD-
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [noithatgiakhanh.net]
 match = -105.0%%
@@ -193,8 +193,8 @@ url = https://www.duyloi.com/vn/giuong-ghe.html
 
 [noithatviva.vn]
 match = -105.0%%
-title = 15+ Giường Tầng Cho Phòng Ngủ Nhỏ Ấn Tượng, Vừa ...
-url = https://noithatviva.vn/tin-tuc/15-giuong-tang-cho-phong-ngu-nho-an-tuong-vua-ben-vua-re-moi-nhat.html
+title = Tham khảo bảng giá giường ngủ tân cổ điển chính xác và ...
+url = https://noithatviva.vn/tin-tuc/tham-khao-bang-gia-giuong-ngu-tan-co-dien-chinh-xac-va-moi-nhat.html
 
 [cafeland.vn]
 match = -120.0%%
