--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-26 15:52:44
+lastsearch = 2024-07-26 17:52:54
 
 [www.diepxuan.com]
 match = -131.2%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = 0.0%%
-title = Huda Beauty Vitamin C
-url = https://www.tiktok.com/discover/huda-beauty-vitamin-c
+match = -193.8%%
+title = Wendy Dodo Sugar Box opening . . . #wendydodosugar ...
+url = https://www.tiktok.com/@unboxing_serotonin/video/7252768147143462186
 
 [archiveofourown.org]
 match = -137.5%%
